--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22059,6 +22059,16 @@
 			<p class="footnote">— 50. Vat. <em>ϯⲛⲁϣϣⲉ</em>.</p>
 			<p class="footnote">— 51. Vat. <em>ⲉⲑⲛⲁϫⲉⲙ</em>.</p>
 			<p>XLV.</p>
+			<p>1. <em>Ⲟⲩⲟϩ ⲛⲁϥϫⲉⲙϫⲟⲙ ⲁⲛ ⲡⲉ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲛ̀ⲱ̀ⲟⲩ ⲛ̀ϩⲏⲧ ⲉ̀ⲣⲉ ⲡⲓⲙⲏϣ ⲕⲱϯ ⲉ̀ⲣⲟϥ. ⲁⲗⲗⲁ ⲡⲉϫⲁϥ ϫⲉ ϩⲓⲧⲟⲩ ⲉ̀ⲃⲟⲗ ϩⲁⲣⲟⲓ ⲧⲏⲣⲟⲩ. ⲟⲩⲟϩ ⲛⲉ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲟ̀ϩⲓ ⲉ̀ⲣⲁⲧϥ ⲛⲉⲙ ⲓⲱⲥⲏⲫ. ϩⲟⲧⲉ ⲉϥⲛⲁⲟⲩⲟⲛϩϥ ⲉ̀ ⲛⲉϥⲥⲛⲏⲟⲩ.</em></p>
+			<p>2. <em>Ⲟⲩⲟϩ ⲁϥⲭⲁ ⲧⲉϥⲥⲙⲏ ⲉϩⲣⲏⲓ ⲁϥⲣⲓⲙⲓ. ⲁⲩⲥⲱⲧⲉⲙ ⲇⲉ ⲧⲏⲣⲟⲩ ⲛ̀ϫⲉ ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ. ⲟⲩⲟϩ ⲁ̀ ϯⲥⲙⲏ ϣⲉ ⲛⲁⲥ ⲉ̀ ⲡⲏⲓ ⲙ̀ⲫⲁⲣⲁⲱ̀.</em></p>
+			<p>3. <em>Ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲇⲉ ⲛ̀ⲛⲉϥⲥⲛⲏⲟⲩ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲓⲱⲥⲏⲫ. ⲁⲛ ⲉ̀ⲧⲓ ϥⲟⲛϧ ⲛ̀ϫⲉ ⲡⲁⲓⲱⲧ. Ⲟⲩⲟϩ ⲛⲁⲣⲉ ⲛⲉϥⲥⲛⲏⲟⲩ ϣϫⲉⲙϫⲟⲙ ⲁⲛ ⲡⲉ ⲛ̀ⲉ̀ⲣⲟⲩⲱ̀<sup class="footnote">1</sup> ⲛⲁϥ. ⲛⲉ ⲁⲩϣⲑⲟⲣⲧⲉⲣ ⲅⲁⲣ ⲡⲉ.</em></p>
+			<p>4. <em>Ⲡⲉϫⲉ ⲓⲱⲥⲏⲫ ⲇⲉ ⲛ̀ⲛⲉϥⲥⲛⲏⲟⲩ. ϫⲉ ϩⲉⲛⲑⲏⲛⲟⲩ ϩⲁⲣⲟⲓ. ⲁⲩϩⲉⲛⲟⲩ<sup class="footnote">2</sup> ϩⲁⲣⲟϥ. ⲟⲩⲟϩ ⲡⲉϫⲁϥ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲓⲱⲥⲏⲫ ⲡⲉⲧⲉⲛⲥⲟⲛ ⲫⲏ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲧⲏⲓϥ ⲉ̀ϧⲣⲏⲓ ⲉ̀ ⲭⲏⲙⲓ.</em></p>
+			<p>5. <em>Ϯⲛⲟⲩ ϫⲉ ⲙ̀ⲡⲉⲛⲑⲣⲉ ⲡⲉⲧⲉⲛϩⲏⲧ ⲙ̀ⲕⲁϩ. ⲟⲩⲇⲉ ⲙ̀ⲡⲉⲛⲑⲣⲉ ⲡⲓϩⲱⲃ ⲛ̀ϣⲟⲧ ⲛ̀ⲧⲉⲛⲑⲏⲛⲟⲩ. ϫⲉ ⲉⲧⲁ̀ⲣⲉⲧⲉⲛⲧⲏⲓⲧ<sup class="footnote">3</sup> ⲙ̀ⲛⲁⲓ. ⲉⲧⲁ̀ ⲫϯ ⲅⲁⲣ ⲧⲁⲟⲩⲟⲓ ϧⲁϫⲱⲧⲉⲛ ⲉⲩⲱⲛϧ ⲛⲱⲧⲉⲛ.</em></p>
+			<p>6. <em>Ⲑⲁⲓ ⲅⲁⲣ<sup class="footnote">4</sup> ⲑⲙⲁϩ ⲣⲟⲙⲡⲓ ⲃ̅ϯ ⲛ̀ϩⲕⲟ ⲧⲉ. ⲉⲧⲁⲩϣⲱⲡⲓ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ<sup class="footnote">5</sup> ⲉ̀ⲧⲓ ⲟⲩⲟⲛ ⲕⲉⲉ̅ ⲥⲟϫⲡ ⲛ̀ⲥⲉⲛⲁⲥⲭⲁⲓ ⲛ̀ϧⲏⲧⲟⲩ ⲁⲛ. ⲟⲩⲇⲉ ⲛ̀ⲥⲉⲛⲁⲱⲥϧ ⲁⲛ<sup class="footnote">6</sup>.</em></p>
+			<p>7. <em>Ⲉⲧⲁ̀ ⲫϯ ⲅⲁⲣ ⲧⲁⲟⲩⲟⲓ ϧⲁϫⲱⲧⲉⲛ ⲉ̀ ⲥⲉϫⲡ ⲟⲩⲥⲱϫⲡ ⲛⲱⲧⲉⲛ ϩⲓϫⲉⲛ ⲡⲓⲕⲁϩⲓ. ⲟⲩⲟϩ ⲉ̀ ϣⲁⲛⲉϣ ⲟⲩⲛⲓϣϯ ⲛ̀ⲥⲱϫⲡ ⲛⲱⲧⲉⲛ.</em></p>
+			<p>8. <em>Ϯⲛⲟⲩ ⲇⲉ ⲛ̀ⲑⲱⲧⲉⲛ ⲁⲛ ⲁ̀ⲣⲉⲧⲉⲛⲟⲩⲟⲣⲡⲧ<sup class="footnote">7</sup> ⲉ̀ⲙⲛⲁⲓ ⲁⲗⲗⲁ ⲫϯ ⲡⲉ. Ⲟⲩⲟϩ ⲁϥⲁⲓⲧ ϩⲁⲙⲛⲁⲓ ⲙ̀ⲫⲁⲣⲁⲱ̀ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲓⲱⲧ<sup class="footnote">8</sup>. ⲛⲉⲙ ϭⲟⲓⲥ ⲉⲡⲉϥⲏⲓ ⲧⲏⲣϥ. ⲛⲉⲙ ⲁⲣⲭⲱⲛ ⲉϫⲉⲛ<sup class="footnote">9</sup> ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ.</em></p>
+			<p>9. <em>Ⲓⲏⲥ ϫⲉ<sup class="footnote">10</sup> ⲛ̀ⲧⲉⲛⲑⲏⲛⲟⲩ. ⲙⲁϣⲉ ⲛⲱⲧⲉⲛ ⲉ̀ⲡϣⲱⲓ ϩⲁ ⲡⲁⲓⲱⲧ ⲟⲩⲟϩ ⲁ̀ϫⲟⲥ ⲛⲁϥ. ϫⲉ ⲛⲁⲓ ⲛⲉ ⲛⲏ ⲉ̀ⲧⲉϥϫⲱ ⲙ̀ⲙⲱⲟⲩ ⲛ̀ϫⲉ ⲡⲉⲕϣⲏⲣⲓ ⲓⲱⲥⲏⲫ. ϫⲉ ⲁ̀ ⲫϯ ⲁⲓⲧ ⲛ̀ϭⲟⲓⲥ ⲉϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲧⲏⲣϥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ. ⲁ̀ⲙⲟⲩ ⲟⲩⲛ<sup class="footnote">11</sup> ⲉ̀ϧⲣⲏⲓ ϩⲁⲣⲟⲓ. ⲟⲩⲟϩ ⲙ̀ⲡⲉⲣⲟ̀ϩⲓ.</em></p>
+			<p>10. <em>Ⲉⲕⲉ̀ϣⲱⲡⲓ<sup class="footnote">12</sup> ϧⲉⲛ ⲡⲕⲁϩⲓ ⲛ̀ⲅⲉⲥⲉⲙ ⲛ̀ⲧⲉ ⲧⲁ̀ⲣⲁⲃⲓⲁ̀. ⲟⲩⲟϩ ⲉⲕⲉ̀ϣⲱⲡⲓ ⲉⲕϧⲉⲛⲧ ⲉ̀ⲣⲟⲓ. ⲛ̀ⲑⲟⲕ ⲛⲉⲙ ⲛⲉⲕϣⲏⲣⲓ. ⲛⲉⲙ ⲛⲓϣⲏⲣⲓ ⲛ̀ⲧⲉ ⲛⲉⲕϣⲏⲣⲓ. ⲛⲉⲕⲉ̀ⲥⲱⲟⲩ. ⲛⲉⲙ ⲛⲉⲕⲉ̀ϩⲱⲟⲩ. ⲛⲉⲙ ⲛⲉⲧⲉⲛⲧⲁⲕ ⲧⲏⲣⲟⲩ<sup class="footnote">13</sup>.</em></p>
 			<p class="footnote">— 1. Vat. <em>ⲉ ⲉⲣⲟⲩⲱ</em>.</p>
 			<p class="footnote">— 2. Vat. + <em>ⲟⲩⲟϩ</em>.</p>
 			<p class="footnote">— 3. Vat. <em>ⲁⲧⲉⲧⲉⲛⲧⲏⲓⲧ</em>.</p>
