--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22084,34 +22084,61 @@
 			<p class="footnote">— 13. Vat. <em>ⲛⲉⲙ ⲛⲏ ⲉⲧⲉⲛⲧⲁⲕ</em>.</p>
 			<p>Le concile d'Éphèse, d'après une lettre de Saint Cyrille.</p>
 			<p>(<i>Zoega, Catalog.</i> p. 28)</p>
-			<p>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ϧⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲧⲁ ⲡⲟⲩⲣⲟ ⲑⲉⲟⲇⲟⲥⲓⲟⲥ ⲟⲩⲱⲣⲡ ⲛ̀ⲥⲱⲓ ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲟⲩⲱⲣⲡ ⲛ̀ⲥⲁ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲉ︤ⲑ︦ⲩ︥ ⲁⲡⲁ ϣⲉⲁⲛⲟⲩϯ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛⲉⲙ ⲡⲉⲛⲓⲱⲧ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛ̀ⲧⲉ ⲧⲁⲃⲉⲛⲛⲏⲥⲓ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁⲛϩⲱⲗ ⲉⲑⲣⲉⲛⲉⲣⲕⲁⲑⲉⲣⲓⲛ ⲙ̀ⲡⲓⲁⲥⲉⲃⲏⲥ ⲛⲉⲥⲧⲟⲣⲓⲟⲥ ⲟⲩⲟϩ ⲛⲁⲣⲉ ϩⲁⲛⲕⲉⲙⲏϣ ⲛ̀ⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲛⲉⲙⲁⲛ ⲡⲉ.</p>
-			<p>Ⲁⲛⲟⲕ ⲇⲉ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛ̀ⲧⲉ ⲧⲁⲃⲉⲛⲛⲏⲥⲓ<sup class="footnote">1</sup>. ⲉⲛⲁⲛⲧⲁⲗⲏⲟⲩⲧ ⲉ ⲟⲩϫⲟⲓ ⲛ̀ⲟⲩⲱⲧ ⲡⲉ ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ ⲉⲑⲣⲉⲛϩⲱⲗ ⲉⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲩⲡⲟⲗⲓⲥ ⲟⲩⲟϩ ⲡⲥⲱϫⲡ ⲛ̀ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲁⲩⲁⲗⲏⲓ ⲡϫⲓⲛⲑⲣⲉⲛⲉⲣϫⲓⲛⲓⲟⲣ<sup class="footnote">2</sup> ⲙ̀ⲡⲓⲡⲉⲗⲁⲅⲟⲥ<sup class="footnote">3</sup> ⲛ̀ⲧⲉ ⲫⲓⲟⲙ ⲁⲛⲁⲙⲟⲛⲓ ⲉϧⲟⲩⲛ ⲉⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲩⲡⲟⲗⲓⲥ.</p>
-			<p>Ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲟⲩⲱⲣⲡ ⲙ̀ⲡⲟⲩⲣⲟ ϫⲉ ⲓⲥ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲁⲩⲓ̀. ⲁϥⲟⲩⲱⲣⲡ ϩⲁⲣⲟⲛ ϫⲉ ⲥⲱⲧⲡ ⲛⲁⲕ ⲛ̀ⲟⲩⲙⲁ ⲉⲑⲣⲉ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲧⲏⲣⲟⲩ ⲑⲱⲟⲩϯ ⲉⲣⲟϥ ⲛ̀ⲥⲉⲧⲁⲙⲟⲛ ⲉ ⲡⲧⲁϫⲣⲟ ⲛ̀ⲧⲉ ⲡⲓⲛⲁϩϯ ⲉ︤ⲑ︦ⲩ︥.</p>
-			<p>ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲛⲉⲣ ⲡⲉⲛⲥⲟϭⲛⲓ ⲛⲉⲙ ⲡⲓⲁⲣⲭⲏⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲣⲱⲙⲏ ⲡⲁⲓⲣⲏϯ ⲁⲛⲥⲱⲧⲡ ⲛⲁⲛ ⲛ̀ϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ ⲁⲓⲟⲩⲱⲣⲡ ⲛ̀ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲧ ϧⲁ ⲡⲁⲑⲣⲟⲛⲟⲥ ⲉⲙⲁⲩ ⲟⲩⲟϩ ⲁⲓⲑⲣⲉ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ϩⲉⲙⲥⲓ ϧⲉⲛ ⲧⲟⲡⲗⲓⲥ ⲛ̀ϯⲙⲉⲧⲟⲩⲣⲟ ⲉⲑⲃⲉ ϫⲉ ⲟⲩⲟⲛ ⲛ̀ⲧⲁϥ ⲙ̀ⲙⲁⲩ ⲛ̀ⲟⲩⲛⲓϣϯ ⲙ̀ⲡⲁⲣⲣⲏⲥⲓⲁ ϧⲁⲧⲉⲛ ⲡⲟⲩⲣⲟ ⲑⲉⲟⲇⲟⲥⲓⲟⲥ ⲉϩⲟⲧⲉⲣⲟⲛ ⲧⲏⲣⲟⲩ.</p>
-			<p>Ⲁⲛⲟⲕ ⲇⲉ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲁⲛϩⲉⲙⲥⲓ ϧⲉⲛ ϯⲡⲟⲗⲓⲥ ϣⲁⲧⲉ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲧⲁϥⲟⲩⲟⲣⲡⲟⲩ ⲛ̀ⲥⲱⲟⲩ ⲓ̀ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϩⲱⲗ ⲉϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ. ⲉⲡⲉϥⲣⲁⲥϯ ⲇⲉ ⲁ ⲡⲟⲩⲣⲟ ⲟⲩⲁϩⲥⲁϩⲛⲓ ⲉⲑⲣⲉⲛϣⲉ ⲛⲁⲛ ⲉϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ ⲟⲩⲟϩ ⲁⲛⲉⲣⲕⲁⲑⲉⲣⲓⲛ ⲙ̀ⲡⲓⲁⲥⲉⲃⲏⲥ ⲛⲉⲥⲟⲣⲓⲟⲥ ⲡⲓϩⲉⲣⲉⲧⲓⲕⲟⲥ ⲉⲧϭⲁϧⲉⲙ ⲙ̀ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ.</p>
-			<p>Ⲟⲩⲟϩ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲛⲧⲁϩⲟ ⲙ̀ⲡⲓⲛⲁϩϯ ⲉⲣⲁⲧϥ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲡⲉⲛϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲁ ⲡⲟⲩⲣⲟ ⲭⲁⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲉϥⲣⲁϣⲓ ⲛⲉⲙⲁⲛ ⲁⲛⲟⲕ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛⲉⲙ ⲡⲕⲉⲥⲏⲡⲓ ⲛ̀ⲛⲓⲉⲛⲓⲥⲕⲟⲡⲟⲥ ⲧⲏⲣⲟⲩ ⲉⲑⲙⲟϣⲓ ⲛⲉⲙⲁⲛ.</p>
-			<p>Ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁϥⲭⲁ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲧⲭⲱⲣⲁ ⲛ̀ⲭⲏⲙⲓ ⲉⲃⲟⲗ ⲉⲑⲣⲟⲩⲁⲗⲏⲓ ⲉⲡⲓϫⲟⲓ ⲛ̀ⲥⲉⲙⲟϣⲓ ϧⲁϫⲱⲛ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲁⲛⲟⲕ ⲇⲉ ϩⲱ ⲛⲉⲙ ⲫⲏ ⲉ︤ⲑ︦ⲩ︥ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲁⲛϩⲉⲙⲥⲓ ⲉⲫⲁϩⲟⲩ ϫⲉ ⲛ̀ⲧⲉⲛⲁⲗⲏⲓ ⲉ ⲟⲩϫⲟⲓ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ.</p>
+			<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ϧⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲧⲁ ⲡⲟⲩⲣⲟ ⲑⲉⲟⲇⲟⲥⲓⲟⲥ ⲟⲩⲱⲣⲡ ⲛ̀ⲥⲱⲓ ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲟⲩⲱⲣⲡ ⲛ̀ⲥⲁ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲉ︤ⲑ︦ⲩ︥ ⲁⲡⲁ ϣⲉⲁⲛⲟⲩϯ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛⲉⲙ ⲡⲉⲛⲓⲱⲧ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛ̀ⲧⲉ ⲧⲁⲃⲉⲛⲛⲏⲥⲓ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁⲛϩⲱⲗ ⲉⲑⲣⲉⲛⲉⲣⲕⲁⲑⲉⲣⲓⲛ ⲙ̀ⲡⲓⲁⲥⲉⲃⲏⲥ ⲛⲉⲥⲧⲟⲣⲓⲟⲥ ⲟⲩⲟϩ ⲛⲁⲣⲉ ϩⲁⲛⲕⲉⲙⲏϣ ⲛ̀ⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲛⲉⲙⲁⲛ ⲡⲉ.</em></p>
+			<p><em>Ⲁⲛⲟⲕ ⲇⲉ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛ̀ⲧⲉ ⲧⲁⲃⲉⲛⲛⲏⲥⲓ<sup class="footnote">1</sup>. ⲉⲛⲁⲛⲧⲁⲗⲏⲟⲩⲧ ⲉ ⲟⲩϫⲟⲓ ⲛ̀ⲟⲩⲱⲧ ⲡⲉ ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ ⲉⲑⲣⲉⲛϩⲱⲗ ⲉⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲩⲡⲟⲗⲓⲥ ⲟⲩⲟϩ ⲡⲥⲱϫⲡ ⲛ̀ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲁⲩⲁⲗⲏⲓ ⲡϫⲓⲛⲑⲣⲉⲛⲉⲣϫⲓⲛⲓⲟⲣ<sup class="footnote">2</sup> ⲙ̀ⲡⲓⲡⲉⲗⲁⲅⲟⲥ<sup class="footnote">3</sup> ⲛ̀ⲧⲉ ⲫⲓⲟⲙ ⲁⲛⲁⲙⲟⲛⲓ ⲉϧⲟⲩⲛ ⲉⲕⲱⲥⲧⲁⲛⲧⲓⲛⲟⲩⲡⲟⲗⲓⲥ.</em></p>
+			<p><em>Ⲁⲛⲟⲕ ⲇⲉ ⲁⲓⲟⲩⲱⲣⲡ ⲙ̀ⲡⲟⲩⲣⲟ ϫⲉ ⲓⲥ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲁⲩⲓ̀. ⲁϥⲟⲩⲱⲣⲡ ϩⲁⲣⲟⲛ ϫⲉ ⲥⲱⲧⲡ ⲛⲁⲕ ⲛ̀ⲟⲩⲙⲁ ⲉⲑⲣⲉ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲧⲏⲣⲟⲩ ⲑⲱⲟⲩϯ ⲉⲣⲟϥ ⲛ̀ⲥⲉⲧⲁⲙⲟⲛ ⲉ ⲡⲧⲁϫⲣⲟ ⲛ̀ⲧⲉ ⲡⲓⲛⲁϩϯ ⲉ︤ⲑ︦ⲩ︥.</em></p>
+			<p><em>ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲛⲉⲣ ⲡⲉⲛⲥⲟϭⲛⲓ ⲛⲉⲙ ⲡⲓⲁⲣⲭⲏⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲣⲱⲙⲏ ⲡⲁⲓⲣⲏϯ ⲁⲛⲥⲱⲧⲡ ⲛⲁⲛ ⲛ̀ϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ ⲁⲓⲟⲩⲱⲣⲡ ⲛ̀ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲧ ϧⲁ ⲡⲁⲑⲣⲟⲛⲟⲥ ⲉⲙⲁⲩ ⲟⲩⲟϩ ⲁⲓⲑⲣⲉ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ϩⲉⲙⲥⲓ ϧⲉⲛ ⲧⲟⲡⲗⲓⲥ ⲛ̀ϯⲙⲉⲧⲟⲩⲣⲟ ⲉⲑⲃⲉ ϫⲉ ⲟⲩⲟⲛ ⲛ̀ⲧⲁϥ ⲙ̀ⲙⲁⲩ ⲛ̀ⲟⲩⲛⲓϣϯ ⲙ̀ⲡⲁⲣⲣⲏⲥⲓⲁ ϧⲁⲧⲉⲛ ⲡⲟⲩⲣⲟ ⲑⲉⲟⲇⲟⲥⲓⲟⲥ ⲉϩⲟⲧⲉⲣⲟⲛ ⲧⲏⲣⲟⲩ.</em></p>
+			<p><em>Ⲁⲛⲟⲕ ⲇⲉ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲁⲛϩⲉⲙⲥⲓ ϧⲉⲛ ϯⲡⲟⲗⲓⲥ ϣⲁⲧⲉ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲧⲁϥⲟⲩⲟⲣⲡⲟⲩ ⲛ̀ⲥⲱⲟⲩ ⲓ̀ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϩⲱⲗ ⲉϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ. ⲉⲡⲉϥⲣⲁⲥϯ ⲇⲉ ⲁ ⲡⲟⲩⲣⲟ ⲟⲩⲁϩⲥⲁϩⲛⲓ ⲉⲑⲣⲉⲛϣⲉ ⲛⲁⲛ ⲉϯⲡⲟⲗⲓⲥ ⲉⲫⲉⲥⲟⲥ ⲟⲩⲟϩ ⲁⲛⲉⲣⲕⲁⲑⲉⲣⲓⲛ ⲙ̀ⲡⲓⲁⲥⲉⲃⲏⲥ ⲛⲉⲥⲟⲣⲓⲟⲥ ⲡⲓϩⲉⲣⲉⲧⲓⲕⲟⲥ ⲉⲧϭⲁϧⲉⲙ ⲙ̀ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ.</em></p>
+			<p><em>Ⲟⲩⲟϩ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉⲛⲧⲁϩⲟ ⲙ̀ⲡⲓⲛⲁϩϯ ⲉⲣⲁⲧϥ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲡⲉⲛϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲁ ⲡⲟⲩⲣⲟ ⲭⲁⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲉϥⲣⲁϣⲓ ⲛⲉⲙⲁⲛ ⲁⲛⲟⲕ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲛⲉⲙ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲡⲓⲁⲣⲭⲏⲙⲁⲛⲇⲣⲓⲧⲏⲥ ⲛⲉⲙ ⲡⲕⲉⲥⲏⲡⲓ ⲛ̀ⲛⲓⲉⲛⲓⲥⲕⲟⲡⲟⲥ ⲧⲏⲣⲟⲩ ⲉⲑⲙⲟϣⲓ ⲛⲉⲙⲁⲛ.</em></p>
+			<p><em>Ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁϥⲭⲁ ⲛⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲧⲭⲱⲣⲁ ⲛ̀ⲭⲏⲙⲓ ⲉⲃⲟⲗ ⲉⲑⲣⲟⲩⲁⲗⲏⲓ ⲉⲡⲓϫⲟⲓ ⲛ̀ⲥⲉⲙⲟϣⲓ ϧⲁϫⲱⲛ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲁⲛⲟⲕ ⲇⲉ ϩⲱ ⲛⲉⲙ ⲫⲏ ⲉ︤ⲑ︦ⲩ︥ ⲁⲡⲁ ϣⲉⲛⲟⲩϯ ⲛⲉⲙ ⲁⲡⲁ ⲃⲓⲕⲧⲱⲣ ⲁⲛϩⲉⲙⲥⲓ ⲉⲫⲁϩⲟⲩ ϫⲉ ⲛ̀ⲧⲉⲛⲁⲗⲏⲓ ⲉ ⲟⲩϫⲟⲓ ⲛ̀ⲧⲉ ⲭⲏⲙⲓ ⲛⲉⲙ ⲛⲉⲛⲉⲣⲏⲟⲩ.</em></p>
 			<p class="footnote">1. Cod. <em>ⲛ̀ⲧⲉ ⲃⲉⲛⲛⲏⲥⲓ</em>.</p>
 			<p class="footnote">275.</p>
 			<p class="footnote">Cod. <em>ⲡⲉⲗⲁⲟⲥ</em>.</p>
 			<p>La Sainte Famille en Egypte.†1†</p>
 			<p class="footnote">1. Copié jadis par Mgr. Agabios Bschai sur un manuscrit du Vatican; c'est une doxologie sur l'air <i>Adam</i>.</p>
-			<p>Ⲙⲁⲱⲟⲩ ⲙ̀ⲡⲉⲛⲛⲟⲩϯ ⲡⲓⲗⲟⲅⲟⲥ ⲛ̀ⲧⲉ ⲫⲓⲱⲧ ⲫⲏ ⲉⲧⲁϥϭⲓⲥⲁⲣⲝ ⲟⲩⲟϩ ⲁϥⲉⲣⲣⲱⲙⲓ</p>
-			<p>Ϣⲁⲛⲧⲉϥⲥⲱϯ ⲙ̀ⲙⲟⲛ ⲁⲛⲟⲛ ϧⲁ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲉⲛⲛⲟⲃⲓ ⲛⲉⲙ ⲛⲉⲛⲁⲛⲟⲙⲓⲁ</p>
-			<p>Ⲉⲧⲁϥⲟⲩⲱⲛϩ†1† ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲉ ⲓⲱⲥⲏⲫ ⲡⲓⲁⲙϣⲉ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲣⲁⲥⲟⲩⲓ</p>
-			<p>Ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲧⲱⲛⲕ ϧⲉⲛ ⲟⲩⲓⲏⲥ ϭⲓ ⲙ̀ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙ ⲧⲉϥⲙⲁⲩ ⲟⲩⲟϩ ⲫⲱⲧ ⲉ ⲭⲏⲙⲓ</p>
-			<p>Ⲁϥⲧⲱⲛϥ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲁϥϭⲓ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲛⲉⲙ ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙⲁⲥ ⲛⲉⲙ ⲥⲁⲗⲱⲙⲏ ϯϧⲉⲗⲗⲱ</p>
-			<p>Ⲁϥⲓ̀ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲉ ⲕⲟⲥⲕⲁⲙ ⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲁⲩ ϣⲁⲧⲉ ⲏⲣⲱⲇⲏⲥ ⲙⲟⲩ</p>
-			<p>Ⲁ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲡϭⲥ ⲟⲩⲟⲛϩϥ ⲉ ⲓⲱⲥⲏⲫ ⲟⲩⲟϩ ⲁϥϩⲟⲛϩⲉⲛ ⲛⲁϥ ⲉ ⲧⲁⲥⲑⲟϥ ⲉ ⲛⲁⲍⲁⲣⲉⲑ</p>
-			<p>Ϧⲉⲛ ⲡⲉϥϫⲓⲛⲧⲁⲥⲑⲟ ⲁ ⲡⲉⲛϭⲥ ⲓ ⲉ ⲡϫⲱⲕⲉⲙ†2† ⲁϥⲓⲛⲓ ⲉⲡϣⲱⲓ ⲛ̀ϯⲙⲟⲩⲙⲓ ⲙ̀ⲙⲱⲟⲩ</p>
-			<p>Ⲉⲥϣⲟⲡ ϣⲁ ⲡⲁⲓⲉϩⲟⲟⲩ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲥⲧⲁⲗϭⲟ†3† ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲉⲣⲭⲣⲁⲥⲑⲉ ⲙ̀ⲙⲟⲥ</p>
-			<p>Ⲟⲩⲟϩ ⲉⲩⲉⲣⲁⲡⲟⲗⲁⲃⲓⲛ ⲙ̀ⲡⲥⲙⲟⲩ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲑⲙⲁⲩ ⲙ̀ⲡⲉⲛⲣⲉϥⲥⲱϯ ⲟⲩⲟϩ ϯⲡⲁⲛⲁⲅⲓⲁ</p>
-			<p>Ⲛⲉⲙ ⲡⲥⲙⲟⲩ ⲛ̀ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲁⲩⲕⲟⲧⲥ ⲉ ⲡⲉⲥⲣⲁⲛ ⲉⲣⲉ ⲡⲉⲥⲣⲁⲛ ⲙⲟⲩⲛ ⲉⲃⲟⲗ ϣⲁ ⲛⲓⲅⲉⲛⲉⲁ ⲧⲏⲣⲟⲩ</p>
-			<p>Ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡⲭ︤ⲥ︥ ⲡⲉⲛⲛⲟⲩϯ ⲁⲗⲏⲑⲱⲥ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϯⲱⲟⲩ†4† ⲛ̀ⲧⲉϥⲙⲁⲩ ⲙ̀ⲡⲁⲣⲑⲉⲛⲟⲥ.</p>
+			<p><em>Ⲙⲁⲱⲟⲩ ⲙ̀ⲡⲉⲛⲛⲟⲩϯ ⲡⲓⲗⲟⲅⲟⲥ ⲛ̀ⲧⲉ ⲫⲓⲱⲧ ⲫⲏ ⲉⲧⲁϥϭⲓⲥⲁⲣⲝ ⲟⲩⲟϩ ⲁϥⲉⲣⲣⲱⲙⲓ</em></p>
+			<p><em>Ϣⲁⲛⲧⲉϥⲥⲱϯ ⲙ̀ⲙⲟⲛ ⲁⲛⲟⲛ ϧⲁ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲉⲛⲛⲟⲃⲓ ⲛⲉⲙ ⲛⲉⲛⲁⲛⲟⲙⲓⲁ</em></p>
+			<p><em>Ⲉⲧⲁϥⲟⲩⲱⲛϩ†1† ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲉ ⲓⲱⲥⲏⲫ ⲡⲓⲁⲙϣⲉ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲣⲁⲥⲟⲩⲓ</em></p>
+			<p><em>Ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲧⲱⲛⲕ ϧⲉⲛ ⲟⲩⲓⲏⲥ ϭⲓ ⲙ̀ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙ ⲧⲉϥⲙⲁⲩ ⲟⲩⲟϩ ⲫⲱⲧ ⲉ ⲭⲏⲙⲓ</em></p>
+			<p><em>Ⲁϥⲧⲱⲛϥ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲁϥϭⲓ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲛⲉⲙ ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙⲁⲥ ⲛⲉⲙ ⲥⲁⲗⲱⲙⲏ ϯϧⲉⲗⲗⲱ</em></p>
+			<p><em>Ⲁϥⲓ̀ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲉ ⲕⲟⲥⲕⲁⲙ ⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲁⲩ ϣⲁⲧⲉ ⲏⲣⲱⲇⲏⲥ ⲙⲟⲩ</em></p>
+			<p><em>Ⲁ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲡϭⲥ ⲟⲩⲟⲛϩϥ ⲉ ⲓⲱⲥⲏⲫ ⲟⲩⲟϩ ⲁϥϩⲟⲛϩⲉⲛ ⲛⲁϥ ⲉ ⲧⲁⲥⲑⲟϥ ⲉ ⲛⲁⲍⲁⲣⲉⲑ</em></p>
+			<p><em>Ϧⲉⲛ ⲡⲉϥϫⲓⲛⲧⲁⲥⲑⲟ ⲁ ⲡⲉⲛϭⲥ ⲓ ⲉ ⲡϫⲱⲕⲉⲙ†2† ⲁϥⲓⲛⲓ ⲉⲡϣⲱⲓ ⲛ̀ϯⲙⲟⲩⲙⲓ ⲙ̀ⲙⲱⲟⲩ</em></p>
+			<p><em>Ⲉⲥϣⲟⲡ ϣⲁ ⲡⲁⲓⲉϩⲟⲟⲩ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲥⲧⲁⲗϭⲟ†3† ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲉⲣⲭⲣⲁⲥⲑⲉ ⲙ̀ⲙⲟⲥ</em></p>
+			<p><em>Ⲟⲩⲟϩ ⲉⲩⲉⲣⲁⲡⲟⲗⲁⲃⲓⲛ ⲙ̀ⲡⲥⲙⲟⲩ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲑⲙⲁⲩ ⲙ̀ⲡⲉⲛⲣⲉϥⲥⲱϯ ⲟⲩⲟϩ ϯⲡⲁⲛⲁⲅⲓⲁ</em></p>
+			<p><em>Ⲛⲉⲙ ⲡⲥⲙⲟⲩ ⲛ̀ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲁⲩⲕⲟⲧⲥ ⲉ ⲡⲉⲥⲣⲁⲛ ⲉⲣⲉ ⲡⲉⲥⲣⲁⲛ ⲙⲟⲩⲛ ⲉⲃⲟⲗ ϣⲁ ⲛⲓⲅⲉⲛⲉⲁ ⲧⲏⲣⲟⲩ</em></p>
+			<p><em>Ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡⲭ︤ⲥ︥ ⲡⲉⲛⲛⲟⲩϯ ⲁⲗⲏⲑⲱⲥ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϯⲱⲟⲩ†4† ⲛ̀ⲧⲉϥⲙⲁⲩ ⲙ̀ⲡⲁⲣⲑⲉⲛⲟⲥ.</em></p>
 			<p class="footnote">1. 245.</p>
 			<p class="footnote">2. <i>Le bassin</i> (<em class="ar">المحمة</em>) D'après le discours attribué au patriarche Théophile, ce mot désigne la source que l'Enfant Jésus fit jaillir à Bubaste à son arrivée en Egypte. Le document présent suppose que Notre-Seigneur fit le miracle à son retour. Une autre doxologie tirée du même manuscrit s'exprime ainsi: «Ils vinrent (au retour) <i>au bassin</i> qu'avait fait le Seigneur et à la source qui guérit toute maladie».</p>
 			<p class="footnote">3. 237.</p>
 			<p class="footnote">4. 252.</p>
+			<p>Les deux marchands†1†.</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p class="footnote">The Martyrdom and miracles of Saint George of Cappadocia, edited by <i>W. Budge</i>, p. 58.</p>
+			<p class="footnote">2. Ps. 103, 20, 21.</p>
+			<p class="footnote">3. Pour <em>ⲛⲟⲩϣⲡ</em>.</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p class="footnote">1. 45.</p>
+			<p></p>
+			<p></p>
+			<p>Extraits de l'éloge d'un évêque de Keft†1†.</p>
+			<p>(VII<sup>e</sup> siècle)</p>
+			<p></p>
+			<p></p>
+			<p class="footnote">1. <i>Mémoires de l'Institut Égyptien</i>, II. p. 333.</p>
+			<p class="footnote">2. 45.</p>
+			<p></p>
 		</div>
 <div id="liste_de_textes">
 			<p>Liste des Textes.</p>
