--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22094,48 +22094,48 @@
 			<p class="footnote">1. Cod. <em>ⲛ̀ⲧⲉ ⲃⲉⲛⲛⲏⲥⲓ</em>.</p>
 			<p class="footnote">275.</p>
 			<p class="footnote">Cod. <em>ⲡⲉⲗⲁⲟⲥ</em>.</p>
-			<p>La Sainte Famille en Egypte.†1†</p>
+			<p>La Sainte Famille en Egypte.<sup class="footnote">1</sup></p>
 			<p class="footnote">1. Copié jadis par Mgr. Agabios Bschai sur un manuscrit du Vatican; c'est une doxologie sur l'air <i>Adam</i>.</p>
 			<p><em>Ⲙⲁⲱⲟⲩ ⲙ̀ⲡⲉⲛⲛⲟⲩϯ ⲡⲓⲗⲟⲅⲟⲥ ⲛ̀ⲧⲉ ⲫⲓⲱⲧ ⲫⲏ ⲉⲧⲁϥϭⲓⲥⲁⲣⲝ ⲟⲩⲟϩ ⲁϥⲉⲣⲣⲱⲙⲓ</em></p>
 			<p><em>Ϣⲁⲛⲧⲉϥⲥⲱϯ ⲙ̀ⲙⲟⲛ ⲁⲛⲟⲛ ϧⲁ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲉⲛⲛⲟⲃⲓ ⲛⲉⲙ ⲛⲉⲛⲁⲛⲟⲙⲓⲁ</em></p>
-			<p><em>Ⲉⲧⲁϥⲟⲩⲱⲛϩ†1† ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲉ ⲓⲱⲥⲏⲫ ⲡⲓⲁⲙϣⲉ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲣⲁⲥⲟⲩⲓ</em></p>
+			<p><em>Ⲉⲧⲁϥⲟⲩⲱⲛϩ<sup class="footnote">1</sup> ⲉⲃⲟⲗ ⲛ̀ϫⲉ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲉ ⲓⲱⲥⲏⲫ ⲡⲓⲁⲙϣⲉ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲣⲁⲥⲟⲩⲓ</em></p>
 			<p><em>Ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲧⲱⲛⲕ ϧⲉⲛ ⲟⲩⲓⲏⲥ ϭⲓ ⲙ̀ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙ ⲧⲉϥⲙⲁⲩ ⲟⲩⲟϩ ⲫⲱⲧ ⲉ ⲭⲏⲙⲓ</em></p>
 			<p><em>Ⲁϥⲧⲱⲛϥ ⲛ̀ϫⲉ ⲓⲱⲥⲏⲫ ⲁϥϭⲓ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲛⲉⲙ ⲡⲓⲁⲗⲟⲩ ⲛⲉⲙⲁⲥ ⲛⲉⲙ ⲥⲁⲗⲱⲙⲏ ϯϧⲉⲗⲗⲱ</em></p>
 			<p><em>Ⲁϥⲓ̀ ⲉϧⲣⲏⲓ ⲉ ⲭⲏⲙⲓ ⲁⲩϣⲉ ⲛⲱⲟⲩ ⲉ ⲕⲟⲥⲕⲁⲙ ⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲁⲩ ϣⲁⲧⲉ ⲏⲣⲱⲇⲏⲥ ⲙⲟⲩ</em></p>
 			<p><em>Ⲁ ⲡⲓⲁⲅⲅⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲡϭⲥ ⲟⲩⲟⲛϩϥ ⲉ ⲓⲱⲥⲏⲫ ⲟⲩⲟϩ ⲁϥϩⲟⲛϩⲉⲛ ⲛⲁϥ ⲉ ⲧⲁⲥⲑⲟϥ ⲉ ⲛⲁⲍⲁⲣⲉⲑ</em></p>
-			<p><em>Ϧⲉⲛ ⲡⲉϥϫⲓⲛⲧⲁⲥⲑⲟ ⲁ ⲡⲉⲛϭⲥ ⲓ ⲉ ⲡϫⲱⲕⲉⲙ†2† ⲁϥⲓⲛⲓ ⲉⲡϣⲱⲓ ⲛ̀ϯⲙⲟⲩⲙⲓ ⲙ̀ⲙⲱⲟⲩ</em></p>
-			<p><em>Ⲉⲥϣⲟⲡ ϣⲁ ⲡⲁⲓⲉϩⲟⲟⲩ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲥⲧⲁⲗϭⲟ†3† ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲉⲣⲭⲣⲁⲥⲑⲉ ⲙ̀ⲙⲟⲥ</em></p>
+			<p><em>Ϧⲉⲛ ⲡⲉϥϫⲓⲛⲧⲁⲥⲑⲟ ⲁ ⲡⲉⲛϭⲥ ⲓ ⲉ ⲡϫⲱⲕⲉⲙ<sup class="footnote">2</sup> ⲁϥⲓⲛⲓ ⲉⲡϣⲱⲓ ⲛ̀ϯⲙⲟⲩⲙⲓ ⲙ̀ⲙⲱⲟⲩ</em></p>
+			<p><em>Ⲉⲥϣⲟⲡ ϣⲁ ⲡⲁⲓⲉϩⲟⲟⲩ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲥⲧⲁⲗϭⲟ<sup class="footnote">3</sup> ⲛ̀ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲉⲣⲭⲣⲁⲥⲑⲉ ⲙ̀ⲙⲟⲥ</em></p>
 			<p><em>Ⲟⲩⲟϩ ⲉⲩⲉⲣⲁⲡⲟⲗⲁⲃⲓⲛ ⲙ̀ⲡⲥⲙⲟⲩ ⲛ̀ϯⲡⲁⲣⲑⲉⲛⲟⲥ ⲑⲙⲁⲩ ⲙ̀ⲡⲉⲛⲣⲉϥⲥⲱϯ ⲟⲩⲟϩ ϯⲡⲁⲛⲁⲅⲓⲁ</em></p>
 			<p><em>Ⲛⲉⲙ ⲡⲥⲙⲟⲩ ⲛ̀ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲉⲧⲁⲩⲕⲟⲧⲥ ⲉ ⲡⲉⲥⲣⲁⲛ ⲉⲣⲉ ⲡⲉⲥⲣⲁⲛ ⲙⲟⲩⲛ ⲉⲃⲟⲗ ϣⲁ ⲛⲓⲅⲉⲛⲉⲁ ⲧⲏⲣⲟⲩ</em></p>
-			<p><em>Ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡⲭ︤ⲥ︥ ⲡⲉⲛⲛⲟⲩϯ ⲁⲗⲏⲑⲱⲥ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϯⲱⲟⲩ†4† ⲛ̀ⲧⲉϥⲙⲁⲩ ⲙ̀ⲡⲁⲣⲑⲉⲛⲟⲥ.</em></p>
+			<p><em>Ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡⲭ︤ⲥ︥ ⲡⲉⲛⲛⲟⲩϯ ⲁⲗⲏⲑⲱⲥ ⲟⲩⲟϩ ⲛ̀ⲧⲉⲛϯⲱⲟⲩ<sup class="footnote">4</sup> ⲛ̀ⲧⲉϥⲙⲁⲩ ⲙ̀ⲡⲁⲣⲑⲉⲛⲟⲥ.</em></p>
 			<p class="footnote">1. 245.</p>
 			<p class="footnote">2. <i>Le bassin</i> (<em class="ar">المحمة</em>) D'après le discours attribué au patriarche Théophile, ce mot désigne la source que l'Enfant Jésus fit jaillir à Bubaste à son arrivée en Egypte. Le document présent suppose que Notre-Seigneur fit le miracle à son retour. Une autre doxologie tirée du même manuscrit s'exprime ainsi: «Ils vinrent (au retour) <i>au bassin</i> qu'avait fait le Seigneur et à la source qui guérit toute maladie».</p>
 			<p class="footnote">3. 237.</p>
 			<p class="footnote">4. 252.</p>
-			<p>Les deux marchands†1†.</p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
+			<p>Les deux marchands<sup class="footnote">1</sup>.</p>
+			<p>Ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲣⲱⲙⲓ ⲃ̅ ⲛ̀ⲥⲁⲙⲁⲣⲓⲧⲏⲥ ⲉⲩⲟⲓ ⲛ̀ϣⲫⲏⲣ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϧⲉⲛ ⲟⲩⲙⲉⲧϣⲱⲧ ⲉⲩϣⲓϯ ϧⲉⲛ ⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</p>
+			<p>Ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϧⲱⲕ ⲛ̀ⲛⲟⲩⲧⲉⲃⲛⲱⲟⲩⲓ ⲁⲩϭⲓ ⲛ̀ⲛⲟⲩⲛⲟⲩⲃ ⲛⲉⲙⲱⲟⲩ ⲁⲩⲧⲁⲗⲱⲟⲩ ⲉⲩⲟⲩⲱϣ ⲉ ϩⲱⲗ ⲉ ⲧⲁⲙⲁⲥⲕⲟⲥ ⲉ ϣⲱⲡ ⲛ̀ⲧⲟⲩⲡⲣⲁⲅⲙⲁⲧⲓⲁ ⲁ ⲣⲟⲩϩⲓ ϣⲱⲡⲓ ⲉⲣⲱⲟⲩ ⲉⲩⲙⲟϣⲓ ϩⲓ ⲫⲙⲱⲓⲧ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϩⲓ ⲡⲓⲙⲱⲓⲧ ⲉⲑⲃⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲉⲣⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ.</p>
+			<p>Ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ ⲉⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲁⲩϧⲱⲛⲧ ⲉ ⲟⲩⲧⲓⲙⲏ ϣⲁⲧⲉⲛ ⲙⲩⲗⲓⲟⲛ ⲃ̅ ⲓⲉ ⲅ̅ ϩⲏⲡⲡⲏ ⲁⲩⲓ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲛ̀ϫⲉ ⲙⲟⲩⲓ ⲃ̅ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲓⲁϩϣϣⲏⲛ ⲉⲩϩⲟⲕⲉⲣ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲥϧⲏⲟⲩⲧ ϫⲉ «ⲁϥⲭⲱ ⲛ̀ⲟⲩⲭⲁⲕⲓ ⲁϥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲉϫⲱⲣϩ ⲉⲩⲉ̀ⲥⲓⲛⲓ ⲛ̀ϧⲏⲧϥ ⲛ̀ϫⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ϩⲁⲛⲙⲁⲥ ⲙ̀ⲙⲟⲩⲓ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲉⲩⲕⲱϯ ⲛ̀ⲥⲁ ⲧⲟⲩϧⲣⲉ»<sup class="footnote">2</sup>.</p>
+			<p>Ⲉⲧⲁ ⲛⲓⲉⲱ ⲛⲁⲩ ⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲁⲩⲓ̀ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲁⲩⲛⲩϣⲡ<sup class="footnote">3</sup> ⲁⲩϩⲉⲓ ⲉⲡⲉⲥⲏⲧ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲁⲩⲉⲣⲫⲁϣⲙⲟⲩ ⲟⲩⲟϩ ⲁ ⲛⲓⲑⲏⲣⲓⲱⲛ ⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲥⲁⲡϣⲱⲓ ⲙ̀ⲙⲱⲟⲩ ⲉⲛⲁⲩⲟⲩⲱϣ ⲉⲟⲩⲱⲙ ⲛ̀ⲛⲓⲣⲱⲙⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϣⲉ ⲛⲱⲟⲩ ⲛⲉⲙ ⲛⲓⲧⲉⲱⲛⲱⲟⲩⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϭⲟϩ ⲉⲣⲱⲟⲩ ⲁⲗⲗⲁ ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲉⲣⲱⲟⲩ ⲉⲩⲑⲱⲣϣ ⲉϩⲣⲏⲓ ⲉϫⲱⲟⲩ.</p>
 			<p class="footnote">The Martyrdom and miracles of Saint George of Cappadocia, edited by <i>W. Budge</i>, p. 58.</p>
 			<p class="footnote">2. Ps. 103, 20, 21.</p>
 			<p class="footnote">3. Pour <em>ⲛⲟⲩϣⲡ</em>.</p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
+			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲉϣⲱⲡ ⲛ̀ⲧⲉ ⲫϯ ⲛⲉⲙ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲟϩⲉⲙ ⲙ̀ⲙⲟⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲣⲱⲟⲩ ⲛ̀ⲛⲁⲓⲑⲏⲣⲓⲟⲛ ⲧⲉⲛⲛⲁϯ ⲙ̀ⲡⲁⲓϣⲉ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉϧⲟⲩⲛ ⲉ ⲡⲉϥⲧⲟⲡⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ.</p>
+			<p>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩϯ ⲣⲱⲟⲩ ⲙ̀ⲫϯ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲁ ⲡⲓⲁⲅⲁⲑⲟⲥ ⲫϯ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲫⲛⲟϩⲉⲙ ⲛ̀ⲣⲱⲙⲓ ⲛⲓⲃⲉⲛ ⲫⲏ ⲉⲧⲁϥⲑⲣⲉ ⲛⲓⲙⲟⲩⲓ ⲉⲣϩⲓⲣⲏⲛⲏ ⲛⲉⲙ ⲇⲁⲛⲓⲏⲗ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲁϥⲧⲏⲓⲥ ⲉ ⲡϩⲏⲧ ⲛ̀ⲛⲁⲓⲕⲉⲭⲱⲟⲩⲛⲓ ⲁⲩϫⲱⲃⲥ ⲛ̀ϫⲱⲟⲩ ⲉⲡⲉⲥⲏⲧ ⲟⲩⲟϩ ⲁⲏϯ ϫⲱⲟⲩ ⲉϧⲟⲩⲛ ⲉ ⲡⲓⲓⲁϩϣϣⲏⲛ ⲁⲩϣⲉ ⲛⲱⲟⲩ.</p>
+			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲉⲧⲁ ⲡⲟⲩϩⲏⲧ ⲥⲉⲙⲛⲓ ⲉⲣⲱⲟⲩ ⲁⲩⲉⲙⲓ ⲉ ϯⲇⲱⲣⲉⲁ ⲉⲧⲁⲥⲧⲁϩⲱⲟⲩ ϫⲉ ⲑⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲧⲉ ⲁⲏϯⲱⲟⲩ ⲙ̀ⲫϯ ⲛⲉⲙ ⲡⲉϥⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ⲉⲧⲁⲩⲙⲟϣⲓ ϩⲓⲧϩⲏ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲁⲩϫⲓⲙⲓ ⲛ̀ⲛⲓⲧⲉⲃⲛⲱⲟⲩⲓ ⲉⲩⲙⲟⲛⲓ ⲙ̀ⲡⲉ ϩⲗⲓ ⲙ̀ⲡⲉⲧϩⲱⲟⲩ ϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ.</p>
+			<p>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲁⲏⲧⲁⲗⲱⲟⲩ ⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲡⲓⲇⲓⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲛⲉⲙ ⲛⲓⲣⲱⲙⲓ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ ⲟⲩⲟϩ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩⲥⲱⲧⲉⲙ ⲁⲩⲉⲣϣⲫⲏⲣⲓ ⲛ̀ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲛ̀ⲧⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ.</p>
+			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛ̀ⲧⲉ ⲡⲓϯⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ϧⲁⲧⲟⲧⲟⲩ ⲡⲉ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲉⲙⲙⲁⲩ ⲧⲁⲕⲟ ⲛ̀ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲕⲉⲙⲏϣ ⲛ̀ⲧⲉⲃⲛⲱⲟⲩⲓ ⲛ̀ⲧⲉ ⲧⲁⲓⲭⲱⲣⲁ ⲁⲗⲗⲁ ⲡⲧⲁⲓⲟ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲡⲉ ⲉⲧⲁϥⲛⲁϩⲉⲙ ⲑⲏⲛⲟⲩ ⲉ ⲧⲁⲓⲟⲣⲅⲏ.</p>
+			<p>Ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁⲩⲥⲟϭⲛⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲧⲁⲛϫⲟϥ ⲧⲉⲛⲛⲁⲁⲓϥ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϣⲉⲡϩⲙⲟⲧ ⲉⲩⲱⲟⲩ<sup class="footnote">1</sup> ⲙ̀ⲫϯ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ϧⲉⲛ ⲟⲩⲙⲉⲑⲙⲏⲓ ⲁⲗⲗⲁ ⲙ̀ⲡⲉⲛⲑⲣⲉⲛⲧⲁⲥⲑⲟⲛ ⲉⲫⲁϩⲟⲩ ϩⲟⲥⲟⲛ ⲁⲛⲓ̀ ϣⲁ ⲡⲁⲓⲙⲁ ⲙⲁⲣⲉⲛϩⲱⲗ ϣⲁ ⲇⲁⲙⲁⲥⲕⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡ ⲛ̀ⲧⲉⲛⲡⲣⲁⲅⲙⲁⲧⲓⲁ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϫⲓⲙⲓ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲧⲉⲛϯ ϧⲉⲛ ⲟⲩⲥⲱⲟⲩⲧⲉⲛ.</p>
+			<p>Ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲇⲁⲙⲁⲥⲕⲟⲥ ⲁⲩϫⲓⲙⲓ ⲛ̀ϩⲁⲛⲱⲛⲓ ⲛ̀ⲁⲛⲁⲙⲏⲓ ⲉⲏϯ ⲙ̀ⲙⲱⲟⲩ ⲉⲃⲟⲗ ⲛⲏ ⲉⲧⲟⲩⲙⲟⲩϯ ⲉⲣⲱⲟⲩ ϫⲉ ⲁⲇⲁⲙⲁⲥ ⲁⲩϣⲟⲡⲟⲩ ϧⲉⲛ ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲓ︤ⲗ︦ⲏ︦ⲙ︥ ⲁⲩⲧⲏⲓⲧⲟⲩ ϧⲁ ⲥ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</p>
+			<p>Ⲙⲡⲁⲧⲟⲩⲫⲟϩ ⲣⲱ ⲉⲧⲟⲩⲃⲁⲕⲓ ⲛ̀ⲧⲥⲁⲙⲁⲣⲓⲁ ⲁⲩⲥⲁϫⲓ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡϩⲙⲟⲧ ⲙ̀ⲫϯ ϣⲏⲡ ϫⲉ ⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϯ ⲛⲁⲛ ⲉⲑⲣⲉⲛⲉⲣⲡⲉⲙⲡϣⲁ ⲙ̀ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϩⲙⲟⲧ.</p>
+			<p>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩⲓ̀ ⲉ ⲧⲟⲩⲃⲁⲕⲓ ⲁⲩⲧⲁⲙⲉ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲛⲟⲩⲥⲩⲛⲅⲉⲛⲏⲥ ⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲁ ⲫϯ ⲁⲓⲧⲟⲩ ⲛⲉⲙⲱⲟⲩ ⲟⲩⲟϩ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϭⲓ ⲙ̀ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲱϣ ⲙ̀ⲙⲱⲟⲩ ⲉ ⲧⲏⲓⲧⲟⲩ ⲙ̀ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲟⲩⲟϩ ⲁⲩϩⲓⲱⲓϣ ϧⲉⲛ ϯⲃⲁⲕⲓ ⲧⲏⲣⲥ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲙⲁⲣⲉϥⲓ̀ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲉⲙⲁⲛ.</p>
 			<p class="footnote">1. 45.</p>
-			<p></p>
-			<p></p>
-			<p>Extraits de l'éloge d'un évêque de Keft†1†.</p>
+			<p>Ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲥϩⲓⲙⲓ ⲁⲩⲓ̀ ⲉⲃⲟⲗ ⲛⲉⲙⲱⲟⲩ ϧⲉⲛ ⲧⲥⲁⲙⲁⲣⲓⲁ ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲧⲟⲡⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϯ ⲛ̀ⲛⲟⲩⲇⲱⲣⲟⲛ ⲉϧⲟⲩⲛ ⲁⲩⲛⲁⲩ ⲉ ϩⲁⲛⲛⲓϣϯ ⲛ̀ϣⲫⲏⲣⲓ ⲛⲉⲙ ϩⲁⲛⲧⲁⲗϭⲟ ⲉⲩⲟϣ ⲛ̀ⲛⲏ ⲉⲧϣⲱⲛⲓ.</p>
+			<p>Ⲟⲩⲙⲏϣ ⲛ̀ⲇⲉⲙⲟⲛ ⲁϥϩⲓⲧⲟⲩ ⲉⲃⲟⲗ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲧⲏⲣⲟⲩ ⲁⲩϭⲓⲱⲙⲥ ⲉ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ⲛ̀ϫⲉ ⲣ̅ⲛ̅ⲅ̅ ⲙ̀ⲯⲩⲭⲏ ϧⲉⲛ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ ϧⲉⲛ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲛ̀ⲧⲉ ⲫϯ ⲁⲙⲏⲛ.</p>
+			<p>Extraits de l'éloge d'un évêque de Keft<sup class="footnote">1</sup>.</p>
 			<p>(VII<sup>e</sup> siècle)</p>
-			<p></p>
-			<p></p>
+			<p>I</p>
+			<p>Ϩⲁⲛⲕⲟⲩϫⲓ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲉⲅⲕⲱⲙⲓⲟⲛ ⲉⲧⲁϥϫⲟⲧⲟⲩ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲙⲱⲩⲥⲏⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲕⲉϥⲧ ⲉ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛⲧⲓⲟⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲧⲁⲓⲡⲟⲗⲓⲥ ⲛ̀ⲟⲩⲱⲧ ⲕⲉϥⲧ ϧⲉⲛ ⲡⲉϩⲟⲟⲩ ⲙ̀ⲡⲉϥⲉⲣⲫⲙⲉⲩⲓ ⲉⲧⲧⲁⲓⲏⲟⲩⲧ ⲉⲧⲉ ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ ⲡⲉ ⲉϥⲉⲣⲥⲩⲛⲫⲱⲛⲓⲛ ⲛⲉⲙⲁϥ ⲛ̀ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲉϥⲙⲁⲑⲏⲧⲏⲥ ⲉⲩⲱⲟⲩ<sup class="footnote">2</sup> ⲙ̀ⲡⲉⲛϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</p>
 			<p class="footnote">1. <i>Mémoires de l'Institut Égyptien</i>, II. p. 333.</p>
 			<p class="footnote">2. 45.</p>
 			<p></p>
