--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22113,31 +22113,75 @@
 			<p class="footnote">3. 237.</p>
 			<p class="footnote">4. 252.</p>
 			<p>Les deux marchands<sup class="footnote">1</sup>.</p>
-			<p>Ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲣⲱⲙⲓ ⲃ̅ ⲛ̀ⲥⲁⲙⲁⲣⲓⲧⲏⲥ ⲉⲩⲟⲓ ⲛ̀ϣⲫⲏⲣ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϧⲉⲛ ⲟⲩⲙⲉⲧϣⲱⲧ ⲉⲩϣⲓϯ ϧⲉⲛ ⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</p>
-			<p>Ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϧⲱⲕ ⲛ̀ⲛⲟⲩⲧⲉⲃⲛⲱⲟⲩⲓ ⲁⲩϭⲓ ⲛ̀ⲛⲟⲩⲛⲟⲩⲃ ⲛⲉⲙⲱⲟⲩ ⲁⲩⲧⲁⲗⲱⲟⲩ ⲉⲩⲟⲩⲱϣ ⲉ ϩⲱⲗ ⲉ ⲧⲁⲙⲁⲥⲕⲟⲥ ⲉ ϣⲱⲡ ⲛ̀ⲧⲟⲩⲡⲣⲁⲅⲙⲁⲧⲓⲁ ⲁ ⲣⲟⲩϩⲓ ϣⲱⲡⲓ ⲉⲣⲱⲟⲩ ⲉⲩⲙⲟϣⲓ ϩⲓ ⲫⲙⲱⲓⲧ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϩⲓ ⲡⲓⲙⲱⲓⲧ ⲉⲑⲃⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲉⲣⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ.</p>
-			<p>Ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ ⲉⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲁⲩϧⲱⲛⲧ ⲉ ⲟⲩⲧⲓⲙⲏ ϣⲁⲧⲉⲛ ⲙⲩⲗⲓⲟⲛ ⲃ̅ ⲓⲉ ⲅ̅ ϩⲏⲡⲡⲏ ⲁⲩⲓ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲛ̀ϫⲉ ⲙⲟⲩⲓ ⲃ̅ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲓⲁϩϣϣⲏⲛ ⲉⲩϩⲟⲕⲉⲣ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲥϧⲏⲟⲩⲧ ϫⲉ «ⲁϥⲭⲱ ⲛ̀ⲟⲩⲭⲁⲕⲓ ⲁϥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲉϫⲱⲣϩ ⲉⲩⲉ̀ⲥⲓⲛⲓ ⲛ̀ϧⲏⲧϥ ⲛ̀ϫⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ϩⲁⲛⲙⲁⲥ ⲙ̀ⲙⲟⲩⲓ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲉⲩⲕⲱϯ ⲛ̀ⲥⲁ ⲧⲟⲩϧⲣⲉ»<sup class="footnote">2</sup>.</p>
-			<p>Ⲉⲧⲁ ⲛⲓⲉⲱ ⲛⲁⲩ ⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲁⲩⲓ̀ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲁⲩⲛⲩϣⲡ<sup class="footnote">3</sup> ⲁⲩϩⲉⲓ ⲉⲡⲉⲥⲏⲧ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲁⲩⲉⲣⲫⲁϣⲙⲟⲩ ⲟⲩⲟϩ ⲁ ⲛⲓⲑⲏⲣⲓⲱⲛ ⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲥⲁⲡϣⲱⲓ ⲙ̀ⲙⲱⲟⲩ ⲉⲛⲁⲩⲟⲩⲱϣ ⲉⲟⲩⲱⲙ ⲛ̀ⲛⲓⲣⲱⲙⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϣⲉ ⲛⲱⲟⲩ ⲛⲉⲙ ⲛⲓⲧⲉⲱⲛⲱⲟⲩⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϭⲟϩ ⲉⲣⲱⲟⲩ ⲁⲗⲗⲁ ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲉⲣⲱⲟⲩ ⲉⲩⲑⲱⲣϣ ⲉϩⲣⲏⲓ ⲉϫⲱⲟⲩ.</p>
+			<p><em>Ⲛⲉ ⲟⲩⲟⲛ ⲟⲩⲣⲱⲙⲓ ⲃ̅ ⲛ̀ⲥⲁⲙⲁⲣⲓⲧⲏⲥ ⲉⲩⲟⲓ ⲛ̀ϣⲫⲏⲣ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϧⲉⲛ ⲟⲩⲙⲉⲧϣⲱⲧ ⲉⲩϣⲓϯ ϧⲉⲛ ⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</em></p>
+			<p><em>Ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϧⲱⲕ ⲛ̀ⲛⲟⲩⲧⲉⲃⲛⲱⲟⲩⲓ ⲁⲩϭⲓ ⲛ̀ⲛⲟⲩⲛⲟⲩⲃ ⲛⲉⲙⲱⲟⲩ ⲁⲩⲧⲁⲗⲱⲟⲩ ⲉⲩⲟⲩⲱϣ ⲉ ϩⲱⲗ ⲉ ⲧⲁⲙⲁⲥⲕⲟⲥ ⲉ ϣⲱⲡ ⲛ̀ⲧⲟⲩⲡⲣⲁⲅⲙⲁⲧⲓⲁ ⲁ ⲣⲟⲩϩⲓ ϣⲱⲡⲓ ⲉⲣⲱⲟⲩ ⲉⲩⲙⲟϣⲓ ϩⲓ ⲫⲙⲱⲓⲧ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ϩⲓ ⲡⲓⲙⲱⲓⲧ ⲉⲑⲃⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲉⲣⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲓⲣⲓ ⲙ̀ⲙⲱⲟⲩ.</em></p>
+			<p><em>Ⲟⲩⲟϩ ⲁⲥϣⲱⲡⲓ ⲉⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲁⲩϧⲱⲛⲧ ⲉ ⲟⲩⲧⲓⲙⲏ ϣⲁⲧⲉⲛ ⲙⲩⲗⲓⲟⲛ ⲃ̅ ⲓⲉ ⲅ̅ ϩⲏⲡⲡⲏ ⲁⲩⲓ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲛ̀ϫⲉ ⲙⲟⲩⲓ ⲃ̅ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲓⲁϩϣϣⲏⲛ ⲉⲩϩⲟⲕⲉⲣ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲥϧⲏⲟⲩⲧ ϫⲉ «ⲁϥⲭⲱ ⲛ̀ⲟⲩⲭⲁⲕⲓ ⲁϥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲉϫⲱⲣϩ ⲉⲩⲉ̀ⲥⲓⲛⲓ ⲛ̀ϧⲏⲧϥ ⲛ̀ϫⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲧⲏⲣⲟⲩ ⲛ̀ⲧⲉ ⲡⲕⲁϩⲓ ϩⲁⲛⲙⲁⲥ ⲙ̀ⲙⲟⲩⲓ ⲉⲩϩⲉⲙϩⲉⲙ ⲉⲩϩⲱⲗⲉⲙ ⲉⲩⲕⲱϯ ⲛ̀ⲥⲁ ⲧⲟⲩϧⲣⲉ»<sup class="footnote">2</sup>.</em></p>
+			<p><em>Ⲉⲧⲁ ⲛⲓⲉⲱ ⲛⲁⲩ ⲉ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲁⲩⲓ̀ ⲉϧⲟⲩⲛ ⲉϩⲣⲁⲩ ⲁⲩⲛⲩϣⲡ<sup class="footnote">3</sup> ⲁⲩϩⲉⲓ ⲉⲡⲉⲥⲏⲧ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲁⲩⲉⲣⲫⲁϣⲙⲟⲩ ⲟⲩⲟϩ ⲁ ⲛⲓⲑⲏⲣⲓⲱⲛ ⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲥⲁⲡϣⲱⲓ ⲙ̀ⲙⲱⲟⲩ ⲉⲛⲁⲩⲟⲩⲱϣ ⲉⲟⲩⲱⲙ ⲛ̀ⲛⲓⲣⲱⲙⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϣⲉ ⲛⲱⲟⲩ ⲛⲉⲙ ⲛⲓⲧⲉⲱⲛⲱⲟⲩⲓ ⲟⲩⲇⲉ ⲙ̀ⲡⲟⲩϭⲟϩ ⲉⲣⲱⲟⲩ ⲁⲗⲗⲁ ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ⲉⲣⲱⲟⲩ ⲉⲩⲑⲱⲣϣ ⲉϩⲣⲏⲓ ⲉϫⲱⲟⲩ.</em></p>
 			<p class="footnote">The Martyrdom and miracles of Saint George of Cappadocia, edited by <i>W. Budge</i>, p. 58.</p>
 			<p class="footnote">2. Ps. 103, 20, 21.</p>
 			<p class="footnote">3. Pour <em>ⲛⲟⲩϣⲡ</em>.</p>
-			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲉϣⲱⲡ ⲛ̀ⲧⲉ ⲫϯ ⲛⲉⲙ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲟϩⲉⲙ ⲙ̀ⲙⲟⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲣⲱⲟⲩ ⲛ̀ⲛⲁⲓⲑⲏⲣⲓⲟⲛ ⲧⲉⲛⲛⲁϯ ⲙ̀ⲡⲁⲓϣⲉ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉϧⲟⲩⲛ ⲉ ⲡⲉϥⲧⲟⲡⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ.</p>
-			<p>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩϯ ⲣⲱⲟⲩ ⲙ̀ⲫϯ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲁ ⲡⲓⲁⲅⲁⲑⲟⲥ ⲫϯ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲫⲛⲟϩⲉⲙ ⲛ̀ⲣⲱⲙⲓ ⲛⲓⲃⲉⲛ ⲫⲏ ⲉⲧⲁϥⲑⲣⲉ ⲛⲓⲙⲟⲩⲓ ⲉⲣϩⲓⲣⲏⲛⲏ ⲛⲉⲙ ⲇⲁⲛⲓⲏⲗ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲁϥⲧⲏⲓⲥ ⲉ ⲡϩⲏⲧ ⲛ̀ⲛⲁⲓⲕⲉⲭⲱⲟⲩⲛⲓ ⲁⲩϫⲱⲃⲥ ⲛ̀ϫⲱⲟⲩ ⲉⲡⲉⲥⲏⲧ ⲟⲩⲟϩ ⲁⲏϯ ϫⲱⲟⲩ ⲉϧⲟⲩⲛ ⲉ ⲡⲓⲓⲁϩϣϣⲏⲛ ⲁⲩϣⲉ ⲛⲱⲟⲩ.</p>
-			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲉⲧⲁ ⲡⲟⲩϩⲏⲧ ⲥⲉⲙⲛⲓ ⲉⲣⲱⲟⲩ ⲁⲩⲉⲙⲓ ⲉ ϯⲇⲱⲣⲉⲁ ⲉⲧⲁⲥⲧⲁϩⲱⲟⲩ ϫⲉ ⲑⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲧⲉ ⲁⲏϯⲱⲟⲩ ⲙ̀ⲫϯ ⲛⲉⲙ ⲡⲉϥⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ⲉⲧⲁⲩⲙⲟϣⲓ ϩⲓⲧϩⲏ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲁⲩϫⲓⲙⲓ ⲛ̀ⲛⲓⲧⲉⲃⲛⲱⲟⲩⲓ ⲉⲩⲙⲟⲛⲓ ⲙ̀ⲡⲉ ϩⲗⲓ ⲙ̀ⲡⲉⲧϩⲱⲟⲩ ϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ.</p>
-			<p>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲁⲏⲧⲁⲗⲱⲟⲩ ⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲡⲓⲇⲓⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲛⲉⲙ ⲛⲓⲣⲱⲙⲓ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ ⲟⲩⲟϩ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩⲥⲱⲧⲉⲙ ⲁⲩⲉⲣϣⲫⲏⲣⲓ ⲛ̀ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲛ̀ⲧⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ.</p>
-			<p>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛ̀ⲧⲉ ⲡⲓϯⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ϧⲁⲧⲟⲧⲟⲩ ⲡⲉ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲉⲙⲙⲁⲩ ⲧⲁⲕⲟ ⲛ̀ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲕⲉⲙⲏϣ ⲛ̀ⲧⲉⲃⲛⲱⲟⲩⲓ ⲛ̀ⲧⲉ ⲧⲁⲓⲭⲱⲣⲁ ⲁⲗⲗⲁ ⲡⲧⲁⲓⲟ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲡⲉ ⲉⲧⲁϥⲛⲁϩⲉⲙ ⲑⲏⲛⲟⲩ ⲉ ⲧⲁⲓⲟⲣⲅⲏ.</p>
-			<p>Ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁⲩⲥⲟϭⲛⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲧⲁⲛϫⲟϥ ⲧⲉⲛⲛⲁⲁⲓϥ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϣⲉⲡϩⲙⲟⲧ ⲉⲩⲱⲟⲩ<sup class="footnote">1</sup> ⲙ̀ⲫϯ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ϧⲉⲛ ⲟⲩⲙⲉⲑⲙⲏⲓ ⲁⲗⲗⲁ ⲙ̀ⲡⲉⲛⲑⲣⲉⲛⲧⲁⲥⲑⲟⲛ ⲉⲫⲁϩⲟⲩ ϩⲟⲥⲟⲛ ⲁⲛⲓ̀ ϣⲁ ⲡⲁⲓⲙⲁ ⲙⲁⲣⲉⲛϩⲱⲗ ϣⲁ ⲇⲁⲙⲁⲥⲕⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡ ⲛ̀ⲧⲉⲛⲡⲣⲁⲅⲙⲁⲧⲓⲁ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϫⲓⲙⲓ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲧⲉⲛϯ ϧⲉⲛ ⲟⲩⲥⲱⲟⲩⲧⲉⲛ.</p>
-			<p>Ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲇⲁⲙⲁⲥⲕⲟⲥ ⲁⲩϫⲓⲙⲓ ⲛ̀ϩⲁⲛⲱⲛⲓ ⲛ̀ⲁⲛⲁⲙⲏⲓ ⲉⲏϯ ⲙ̀ⲙⲱⲟⲩ ⲉⲃⲟⲗ ⲛⲏ ⲉⲧⲟⲩⲙⲟⲩϯ ⲉⲣⲱⲟⲩ ϫⲉ ⲁⲇⲁⲙⲁⲥ ⲁⲩϣⲟⲡⲟⲩ ϧⲉⲛ ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲓ︤ⲗ︦ⲏ︦ⲙ︥ ⲁⲩⲧⲏⲓⲧⲟⲩ ϧⲁ ⲥ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</p>
-			<p>Ⲙⲡⲁⲧⲟⲩⲫⲟϩ ⲣⲱ ⲉⲧⲟⲩⲃⲁⲕⲓ ⲛ̀ⲧⲥⲁⲙⲁⲣⲓⲁ ⲁⲩⲥⲁϫⲓ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡϩⲙⲟⲧ ⲙ̀ⲫϯ ϣⲏⲡ ϫⲉ ⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϯ ⲛⲁⲛ ⲉⲑⲣⲉⲛⲉⲣⲡⲉⲙⲡϣⲁ ⲙ̀ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϩⲙⲟⲧ.</p>
-			<p>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩⲓ̀ ⲉ ⲧⲟⲩⲃⲁⲕⲓ ⲁⲩⲧⲁⲙⲉ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲛⲟⲩⲥⲩⲛⲅⲉⲛⲏⲥ ⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲁ ⲫϯ ⲁⲓⲧⲟⲩ ⲛⲉⲙⲱⲟⲩ ⲟⲩⲟϩ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϭⲓ ⲙ̀ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲱϣ ⲙ̀ⲙⲱⲟⲩ ⲉ ⲧⲏⲓⲧⲟⲩ ⲙ̀ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲟⲩⲟϩ ⲁⲩϩⲓⲱⲓϣ ϧⲉⲛ ϯⲃⲁⲕⲓ ⲧⲏⲣⲥ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲙⲁⲣⲉϥⲓ̀ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲉⲙⲁⲛ.</p>
+			<p><em>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲉϣⲱⲡ ⲛ̀ⲧⲉ ⲫϯ ⲛⲉⲙ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲟϩⲉⲙ ⲙ̀ⲙⲟⲛ ⲉⲃⲟⲗ ϧⲉⲛ ⲣⲱⲟⲩ ⲛ̀ⲛⲁⲓⲑⲏⲣⲓⲟⲛ ⲧⲉⲛⲛⲁϯ ⲙ̀ⲡⲁⲓϣⲉ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉϧⲟⲩⲛ ⲉ ⲡⲉϥⲧⲟⲡⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ.</em></p>
+			<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩϯ ⲣⲱⲟⲩ ⲙ̀ⲫϯ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲁ ⲡⲓⲁⲅⲁⲑⲟⲥ ⲫϯ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲫⲛⲟϩⲉⲙ ⲛ̀ⲣⲱⲙⲓ ⲛⲓⲃⲉⲛ ⲫⲏ ⲉⲧⲁϥⲑⲣⲉ ⲛⲓⲙⲟⲩⲓ ⲉⲣϩⲓⲣⲏⲛⲏ ⲛⲉⲙ ⲇⲁⲛⲓⲏⲗ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲁϥⲧⲏⲓⲥ ⲉ ⲡϩⲏⲧ ⲛ̀ⲛⲁⲓⲕⲉⲭⲱⲟⲩⲛⲓ ⲁⲩϫⲱⲃⲥ ⲛ̀ϫⲱⲟⲩ ⲉⲡⲉⲥⲏⲧ ⲟⲩⲟϩ ⲁⲏϯ ϫⲱⲟⲩ ⲉϧⲟⲩⲛ ⲉ ⲡⲓⲓⲁϩϣϣⲏⲛ ⲁⲩϣⲉ ⲛⲱⲟⲩ.</em></p>
+			<p><em>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲉⲧⲁ ⲡⲟⲩϩⲏⲧ ⲥⲉⲙⲛⲓ ⲉⲣⲱⲟⲩ ⲁⲩⲉⲙⲓ ⲉ ϯⲇⲱⲣⲉⲁ ⲉⲧⲁⲥⲧⲁϩⲱⲟⲩ ϫⲉ ⲑⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲧⲉ ⲁⲏϯⲱⲟⲩ ⲙ̀ⲫϯ ⲛⲉⲙ ⲡⲉϥⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲟⲩⲟϩ ⲉⲧⲁⲩⲙⲟϣⲓ ϩⲓⲧϩⲏ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲁⲩϫⲓⲙⲓ ⲛ̀ⲛⲓⲧⲉⲃⲛⲱⲟⲩⲓ ⲉⲩⲙⲟⲛⲓ ⲙ̀ⲡⲉ ϩⲗⲓ ⲙ̀ⲡⲉⲧϩⲱⲟⲩ ϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ.</em></p>
+			<p><em>Ⲛⲑⲱⲟⲩ ⲇⲉ ⲁⲏⲧⲁⲗⲱⲟⲩ ⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲡⲓⲇⲓⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲛⲉⲙ ⲛⲓⲣⲱⲙⲓ ⲛ̀ϩⲱⲃ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩϣⲱⲡⲓ ⲙ̀ⲙⲱⲟⲩ ⲟⲩⲟϩ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲁⲩⲥⲱⲧⲉⲙ ⲁⲩⲉⲣϣⲫⲏⲣⲓ ⲛ̀ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲛ̀ⲧⲉ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ.</em></p>
+			<p><em>Ⲛⲓⲣⲱⲙⲓ ⲇⲉ ⲛ̀ⲧⲉ ⲡⲓϯⲙⲓ ⲛⲁⲩⲥⲁϫⲓ ϧⲁⲧⲟⲧⲟⲩ ⲡⲉ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁ ⲛⲓⲑⲏⲣⲓⲟⲛ ⲉⲧⲉⲙⲙⲁⲩ ⲧⲁⲕⲟ ⲛ̀ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲕⲉⲙⲏϣ ⲛ̀ⲧⲉⲃⲛⲱⲟⲩⲓ ⲛ̀ⲧⲉ ⲧⲁⲓⲭⲱⲣⲁ ⲁⲗⲗⲁ ⲡⲧⲁⲓⲟ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲡⲉ ⲉⲧⲁϥⲛⲁϩⲉⲙ ⲑⲏⲛⲟⲩ ⲉ ⲧⲁⲓⲟⲣⲅⲏ.</em></p>
+			<p><em>Ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲁⲩⲥⲟϭⲛⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲧⲁⲛϫⲟϥ ⲧⲉⲛⲛⲁⲁⲓϥ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϣⲉⲡϩⲙⲟⲧ ⲉⲩⲱⲟⲩ<sup class="footnote">1</sup> ⲙ̀ⲫϯ ⲛ̀ⲧⲉⲛϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ϧⲉⲛ ⲟⲩⲙⲉⲑⲙⲏⲓ ⲁⲗⲗⲁ ⲙ̀ⲡⲉⲛⲑⲣⲉⲛⲧⲁⲥⲑⲟⲛ ⲉⲫⲁϩⲟⲩ ϩⲟⲥⲟⲛ ⲁⲛⲓ̀ ϣⲁ ⲡⲁⲓⲙⲁ ⲙⲁⲣⲉⲛϩⲱⲗ ϣⲁ ⲇⲁⲙⲁⲥⲕⲟⲥ ⲛ̀ⲧⲉⲛϣⲱⲡ ⲛ̀ⲧⲉⲛⲡⲣⲁⲅⲙⲁⲧⲓⲁ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲛϫⲓⲙⲓ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲧⲉⲛϯ ϧⲉⲛ ⲟⲩⲥⲱⲟⲩⲧⲉⲛ.</em></p>
+			<p><em>Ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲇⲁⲙⲁⲥⲕⲟⲥ ⲁⲩϫⲓⲙⲓ ⲛ̀ϩⲁⲛⲱⲛⲓ ⲛ̀ⲁⲛⲁⲙⲏⲓ ⲉⲏϯ ⲙ̀ⲙⲱⲟⲩ ⲉⲃⲟⲗ ⲛⲏ ⲉⲧⲟⲩⲙⲟⲩϯ ⲉⲣⲱⲟⲩ ϫⲉ ⲁⲇⲁⲙⲁⲥ ⲁⲩϣⲟⲡⲟⲩ ϧⲉⲛ ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲓ̀ ⲉϩⲣⲏⲓ ⲉ ⲓ︤ⲗ︦ⲏ︦ⲙ︥ ⲁⲩⲧⲏⲓⲧⲟⲩ ϧⲁ ⲥ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ.</em></p>
+			<p><em>Ⲙⲡⲁⲧⲟⲩⲫⲟϩ ⲣⲱ ⲉⲧⲟⲩⲃⲁⲕⲓ ⲛ̀ⲧⲥⲁⲙⲁⲣⲓⲁ ⲁⲩⲥⲁϫⲓ ⲛ̀ϫⲉ ⲛⲓⲣⲱⲙⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡϩⲙⲟⲧ ⲙ̀ⲫϯ ϣⲏⲡ ϫⲉ ⲁ ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϯ ⲛⲁⲛ ⲉⲑⲣⲉⲛⲉⲣⲡⲉⲙⲡϣⲁ ⲙ̀ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϩⲙⲟⲧ.</em></p>
+			<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ⲉⲧⲁⲩⲓ̀ ⲉ ⲧⲟⲩⲃⲁⲕⲓ ⲁⲩⲧⲁⲙⲉ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲛⲟⲩⲥⲩⲛⲅⲉⲛⲏⲥ ⲉ ⲛⲓϫⲟⲙ ⲛⲉⲙ ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲁ ⲫϯ ⲁⲓⲧⲟⲩ ⲛⲉⲙⲱⲟⲩ ⲟⲩⲟϩ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲁⲩϭⲓ ⲙ̀ⲡⲓⲣ̅ ⲛ̀ⲗⲟⲩⲕⲟϫⲓ ⲉⲧⲁⲩⲱϣ ⲙ̀ⲙⲱⲟⲩ ⲉ ⲧⲏⲓⲧⲟⲩ ⲙ̀ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲟⲩⲟϩ ⲁⲩϩⲓⲱⲓϣ ϧⲉⲛ ϯⲃⲁⲕⲓ ⲧⲏⲣⲥ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫⲏ ⲉⲑⲟⲩⲱϣ ⲙⲁⲣⲉϥⲓ̀ ⲉ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ⲛⲉⲙⲁⲛ.</em></p>
 			<p class="footnote">1. 45.</p>
-			<p>Ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲥϩⲓⲙⲓ ⲁⲩⲓ̀ ⲉⲃⲟⲗ ⲛⲉⲙⲱⲟⲩ ϧⲉⲛ ⲧⲥⲁⲙⲁⲣⲓⲁ ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲧⲟⲡⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϯ ⲛ̀ⲛⲟⲩⲇⲱⲣⲟⲛ ⲉϧⲟⲩⲛ ⲁⲩⲛⲁⲩ ⲉ ϩⲁⲛⲛⲓϣϯ ⲛ̀ϣⲫⲏⲣⲓ ⲛⲉⲙ ϩⲁⲛⲧⲁⲗϭⲟ ⲉⲩⲟϣ ⲛ̀ⲛⲏ ⲉⲧϣⲱⲛⲓ.</p>
-			<p>Ⲟⲩⲙⲏϣ ⲛ̀ⲇⲉⲙⲟⲛ ⲁϥϩⲓⲧⲟⲩ ⲉⲃⲟⲗ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲧⲏⲣⲟⲩ ⲁⲩϭⲓⲱⲙⲥ ⲉ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ⲛ̀ϫⲉ ⲣ̅ⲛ̅ⲅ̅ ⲙ̀ⲯⲩⲭⲏ ϧⲉⲛ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ ϧⲉⲛ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲛ̀ⲧⲉ ⲫϯ ⲁⲙⲏⲛ.</p>
+			<p><em>Ϩⲁⲛⲙⲏϣ ⲛ̀ⲣⲱⲙⲓ ⲛⲉⲙ ϩⲁⲛⲥϩⲓⲙⲓ ⲁⲩⲓ̀ ⲉⲃⲟⲗ ⲛⲉⲙⲱⲟⲩ ϧⲉⲛ ⲧⲥⲁⲙⲁⲣⲓⲁ ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉ ⲡⲧⲟⲡⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϯ ⲛ̀ⲛⲟⲩⲇⲱⲣⲟⲛ ⲉϧⲟⲩⲛ ⲁⲩⲛⲁⲩ ⲉ ϩⲁⲛⲛⲓϣϯ ⲛ̀ϣⲫⲏⲣⲓ ⲛⲉⲙ ϩⲁⲛⲧⲁⲗϭⲟ ⲉⲩⲟϣ ⲛ̀ⲛⲏ ⲉⲧϣⲱⲛⲓ.</em></p>
+			<p><em>Ⲟⲩⲙⲏϣ ⲛ̀ⲇⲉⲙⲟⲛ ⲁϥϩⲓⲧⲟⲩ ⲉⲃⲟⲗ ⲁⲩⲧⲱⲟⲩⲛⲟⲩ ⲧⲏⲣⲟⲩ ⲁⲩϭⲓⲱⲙⲥ ⲉ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ ⲛⲉⲙ ⲡϣⲏⲣⲓ ⲛⲉⲙ ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉⲑⲟⲩⲁⲃ ⲁⲩϣⲱⲡⲓ ⲛ̀ⲭⲣⲏⲥⲧⲓⲁⲛⲟⲥ ⲛ̀ϫⲉ ⲣ̅ⲛ̅ⲅ̅ ⲙ̀ⲯⲩⲭⲏ ϧⲉⲛ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲉⲙⲙⲁⲩ ϧⲉⲛ ⲡⲧⲟⲡⲟⲥ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲅⲉⲱⲣⲅⲓⲟⲥ ϧⲉⲛ ⲟⲩϩⲓⲣⲏⲛⲏ ⲛ̀ⲧⲉ ⲫϯ ⲁⲙⲏⲛ.</em></p>
 			<p>Extraits de l'éloge d'un évêque de Keft<sup class="footnote">1</sup>.</p>
 			<p>(VII<sup>e</sup> siècle)</p>
 			<p>I</p>
-			<p>Ϩⲁⲛⲕⲟⲩϫⲓ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲉⲅⲕⲱⲙⲓⲟⲛ ⲉⲧⲁϥϫⲟⲧⲟⲩ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲙⲱⲩⲥⲏⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲕⲉϥⲧ ⲉ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛⲧⲓⲟⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲧⲁⲓⲡⲟⲗⲓⲥ ⲛ̀ⲟⲩⲱⲧ ⲕⲉϥⲧ ϧⲉⲛ ⲡⲉϩⲟⲟⲩ ⲙ̀ⲡⲉϥⲉⲣⲫⲙⲉⲩⲓ ⲉⲧⲧⲁⲓⲏⲟⲩⲧ ⲉⲧⲉ ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ ⲡⲉ ⲉϥⲉⲣⲥⲩⲛⲫⲱⲛⲓⲛ ⲛⲉⲙⲁϥ ⲛ̀ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲉϥⲙⲁⲑⲏⲧⲏⲥ ⲉⲩⲱⲟⲩ<sup class="footnote">2</sup> ⲙ̀ⲡⲉⲛϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</p>
+			<p><em>Ϩⲁⲛⲕⲟⲩϫⲓ ⲉⲃⲟⲗϧⲉⲛ ⲛⲓⲉⲅⲕⲱⲙⲓⲟⲛ ⲉⲧⲁϥϫⲟⲧⲟⲩ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲙⲱⲩⲥⲏⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲕⲉϥⲧ ⲉ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛⲧⲓⲟⲥ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲧⲉ ⲧⲁⲓⲡⲟⲗⲓⲥ ⲛ̀ⲟⲩⲱⲧ ⲕⲉϥⲧ ϧⲉⲛ ⲡⲉϩⲟⲟⲩ ⲙ̀ⲡⲉϥⲉⲣⲫⲙⲉⲩⲓ ⲉⲧⲧⲁⲓⲏⲟⲩⲧ ⲉⲧⲉ ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ ⲡⲉ ⲉϥⲉⲣⲥⲩⲛⲫⲱⲛⲓⲛ ⲛⲉⲙⲁϥ ⲛ̀ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲉϥⲙⲁⲑⲏⲧⲏⲥ ⲉⲩⲱⲟⲩ<sup class="footnote">2</sup> ⲙ̀ⲡⲉⲛϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥.</em></p>
 			<p class="footnote">1. <i>Mémoires de l'Institut Égyptien</i>, II. p. 333.</p>
 			<p class="footnote">2. 45.</p>
+			<p><em>ⲧϩⲩⲡⲟⲑⲉⲥⲓⲥ ⲙ̀ⲡⲁⲓϣⲁⲓ ⲙ̀ⲫⲟⲟⲩ ϥⲙⲉϩ ⲛ̀ⲣⲁϣⲓ ⲛⲉⲙ ⲟⲩⲛⲟϥ ⲉⲧⲉ ⲡⲉϩⲟⲟⲩ ⲡⲉ ⲙ̀ⲡⲉⲛⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ ⲉⲧⲉⲣⲫⲟⲣⲓⲛ ⲙ̀ⲡⲭ︤ⲥ︥ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲓⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲉⲧⲉⲛϩⲟⲧ ϥⲙⲉϩ ⲛ̀ⲟⲩⲱⲓⲛⲓ ϧⲉⲛ ⲟⲩⲙⲉⲧϩⲟⲩⲟ ϧⲉⲛ ⲡⲥⲱϫⲡ ⲛ̀ⲛⲓⲉϩⲟⲟⲩ ⲛ̀ⲧⲉ ϯⲣⲟⲙⲡⲓ ⲧⲏⲣⲥ ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲉ ⲡⲓⲥⲁϫⲓ ⲛⲁⲧⲁⲙⲟⲛ ⲉϣⲱⲡ ⲁⲛϣⲁⲛⲙⲟϣⲓ ⲉⲧϩⲏ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ.</em></p>
+			<p><em>ⲁⲩⲓⲥ ⲇⲉ ϯⲛⲟⲩ ⲛ̀ⲧⲉⲛϫⲱ<sup class="footnote">1</sup> ⲉⲣⲱⲧⲉⲛ ⲛ̀ⲛⲓϣⲫⲏⲣⲓ ⲉⲧⲁϥⲁⲓⲧⲟⲩ ⲛ̀ϫⲉ ⲫϯ ⲉⲃⲟⲗϩⲓⲧⲟⲧϥ ⲙ̀ⲡⲉⲛⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲓⲥϫⲉⲛ ⲧⲉϥⲙⲉⲧⲕⲟⲩϫⲓ.</em></p>
+			<p><em>ⲁⲩϫⲟⲥ ⲟⲩⲛ ⲉⲑⲃⲏⲧϥ ϫⲉ ⲉϥⲟⲓ ⲛ̀ⲕⲟⲩϫⲓ ⲛⲁϥⲁⲙⲟⲛⲓ ⲛ̀ⲛⲓⲉⲥⲱⲟⲩ ⲛ̀ⲧⲉ ⲡⲉϥⲓⲱⲧ ⲁ ⲫϯ ⲟⲩⲱⲛ ⲛ̀ⲛⲉϥⲃⲁⲗ ⲁϥⲛⲁⲩ ⲉ ⲟⲩⲥⲧⲩⲗⲟⲥ ⲛ̀ⲭⲣⲱⲙ ⲉϥⲥⲱⲕ ϩⲓⲧϩⲏ ⲙ̀ⲙⲟϥ ⲛⲁϥⲙⲟϣⲓ ⲟⲩⲛ ⲡⲉ ⲛⲉⲙ ⲕⲉⲁⲗⲟⲩ ⲙ̀ⲡⲉϥⲣⲏϯ. ⲡⲉϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲙ̀ⲡⲓⲁⲗⲟⲩ ⲉⲑⲙⲟϣⲓ ⲛⲉⲙⲁϥ ϫⲉ ⲁⲕⲛⲁⲩ ⲉ ⲡⲁⲓⲥⲧⲩⲗⲟⲥ ⲛ̀ⲭⲣⲱⲙ ⲉϥⲙⲟϣⲓ ϩⲓⲧϩⲏ ⲙ̀ⲙⲟⲛ ⲡⲉϫⲁϥ ϫⲉ ⲙ̀ⲫⲏ. ⲁϥⲱϣ ⲇⲉ ⲉⲡϣⲱⲓ ϩⲁ ⲫϯ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲫϯ ⲁⲟⲩⲱⲛ ⲛ̀ⲛⲓⲃⲁⲗ ⲛ̀ⲧⲉ ⲡⲁⲥⲟⲛ ϩⲱϥ ϩⲓⲛⲁ ⲡⲁⲓⲥⲧⲩⲗⲟⲥ ⲛ̀ⲭⲣⲱⲙ ⲙ̀ⲫⲣⲏϯ ⲉϯⲛⲁⲩ ⲉⲣⲟϥ ⲙⲁⲣⲉϥⲛⲁⲩ ⲉⲣⲟϥ ϩⲱϥ ⲛ̀ϫⲉ ⲡⲁϣⲫⲏⲣ. ⲁϥⲥⲱⲧⲉⲙ ⲟⲩⲛ ⲛ̀ϫⲉ ⲫϯ ⲉ ⲡⲉϥⲧⲱⲃϩ ⲁϥⲟⲩⲱⲛ ⲛ̀ⲛⲓⲃⲁⲗ ⲛ̀ⲧⲉ ⲡⲉϥϣⲫⲏⲣ ⲁϥⲛⲁⲩ ⲉⲣⲟϥ ⲟⲩⲟϩ ⲁϥⲉⲣϣⲫⲏⲣⲓ ⲉⲙⲁϣⲱ.</em></p>
+			<p class="footnote">1. 252.</p>
+			<p><em>ⲁⲩϫⲟⲥ ⲟⲛ ⲉⲑⲃⲏⲧϥ ϫⲉ ϧⲉⲛ ϯⲁⲣⲭⲏ ⲙⲉⲛ ⲉⲧⲁϥⲉⲣⲙⲟⲛⲁⲭⲟⲥ ϫⲉ ⲁⲥϣⲱⲡⲓ ⲉⲑⲣⲉϥϭⲓ ⲙ̀ⲡⲓⲯⲁⲗⲧⲏⲣⲓⲟⲛ ⲛ̀ⲁⲡⲟⲥⲑⲏⲧⲏⲥ. ⲛⲉ ϣⲁϥⲓ̀ ⲉⲃⲟⲗ ⲙ̀ⲫⲛⲁⲩ ⲙ̀ⲡⲓⲕⲁⲩⲙⲁ ⲙ̀ⲡⲕⲉⲣⲟⲥ ⲉⲣⲉ ⲡⲓⲙⲱⲟⲩ ⲛⲏⲟⲩ ⲉϩⲣⲏⲓ ⲛ̀ϧⲣⲏⲧϥ ⲉⲣⲉ ⲛⲓⲧⲱⲟⲩ ⲣⲟⲕϩ ϩⲓⲧⲉⲛ ⲡⲓⲕⲁⲩⲙⲁ. ϣⲁϥⲟϩⲓ ⲉⲣⲁⲧϥ ϧⲉⲛ ⲟⲩⲙⲁ ⲛ̀ⲥⲁϩⲣⲉ ⲉⲧⲉ ⲙ̀ⲙⲟⲛ ⲣⲱⲙⲓ ⲛⲁⲩ ⲉⲣⲟϥ ⲛ̀ϧⲏⲧϥ ⲛ̀ⲧⲉϥⲙⲟⲩⲣ ⲛ̀ⲟⲩⲛⲓϣϯ ⲛ̀ⲱⲛⲓ ⲉⲡⲉϥⲙⲟⲩⲧ ϣⲁⲧⲉϥⲧⲁⲟⲩⲟ ⲙ̀ⲡⲓⲯⲁⲗⲧⲏⲣⲓⲟⲛ ⲧⲏⲣϥ ⲛ̀ⲁⲡⲟⲥⲑⲏⲧⲏⲥ ⲙ̀ⲡⲁⲧⲉϥⲭⲁϥ ⲉⲡⲉⲥⲏⲧ ϩⲱⲥⲇⲉ ⲛ̀ⲧⲉ ⲣⲁⲧϥ ⲣⲱⲕϩ ϩⲓⲧⲉⲛ ⲡⲓⲣⲱⲕϩ ⲛ̀ⲧⲉ ⲡⲓⲧⲱⲟⲩ ⲛ̀ⲧⲉ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ϫⲟⲥ ϫⲉ ⲉⲧⲁϥϩⲱⲙⲓ ⲉϫⲉⲛ ϩⲁⲛϫⲉⲃⲥ ⲛ̀ⲭⲣⲱⲙ.</em></p>
+			<p><em>ⲁⲙⲉⲗⲓ ⲟⲩⲛ ⲁ ⲟⲩⲥⲟⲛ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ϩⲓⲕⲟⲧ ⲉⲣⲟϥ ⲛ̀ⲟⲩⲉϩⲟⲟⲩ ⲟⲩⲟϩ ⲁϥϣⲓⲛⲓ ⲛ̀ⲥⲱϥ ϧⲉⲛ ⲡⲉϥⲃⲏⲃ ⲙ̀ⲡⲉϥϫⲉⲙϥ ⲁϥⲙⲟϣⲓ ⲛ̀ⲥⲁ ⲧⲉϥⲥⲧⲣⲁⲧⲁ ⲁϥⲛⲁⲩ ⲉⲣⲟϥ ⲉϥⲓⲣⲓ ⲙ̀ⲡⲁⲓⲣⲏϯ ϩⲱⲥⲇⲉ ϩⲓⲧⲉⲛ ⲡϩⲣⲟϣ ⲙ̀ⲡⲓⲱⲛⲓ ⲛ̀ⲧⲉ ⲛⲉϥⲃⲁⲗ ⲙⲟϩ ⲛ̀ⲥⲛⲟϥ ϩⲱⲥ ϫⲉ ⲉⲩⲛⲁⲫⲱⲣⲕ ⲛ̀ⲥⲉⲓ̀ ⲉⲃⲟⲗ.</em></p>
+			<p><em>ⲉⲧⲁ ⲡⲓⲥⲟⲛ ⲇⲉ ϧⲱⲛⲧ ⲉϧⲟⲩⲛ ⲉⲣⲟϥ ϣⲁ ⲡϣⲁⲩ ⲛ̀ϩⲓⲟⲩⲓ ⲛ̀ⲟⲩⲥⲟⲑⲛⲉϥ ⲉⲃⲟⲗ ⲁϥⲥⲱⲧⲉⲙ ⲉⲣⲟϥ ⲉϥϫⲱ ⲙ̀ⲡⲁⲓⲯⲁⲗⲙⲟⲥ ϫⲉ ⲁⲓⲛⲁϩⲱⲥ ⲛⲁⲕ ⲡϭⲥ ⲛ̀ⲟⲩⲛⲁⲓ ⲛⲉⲙ ⲟⲩϩⲁⲡ ϯⲛⲁⲉⲣⲯⲁⲗⲓⲛ ⲛ̀ⲧⲁⲕⲁϯ ϧⲉⲛ ⲟⲩⲙⲱⲓⲧ ⲛ̀ⲁⲧⲁϭⲛⲓ ϫⲉ ⲁⲕⲛⲁⲓ̀ ϣⲁⲣⲟⲓ ⲛ̀ⲑⲛⲁⲩ<sup class="footnote">1</sup>.</em></p>
+			<p class="footnote">Ps. 100, 1.</p>
+			<p><em>ⲉⲧⲁϥϫⲟⲩϣⲧ ⲇⲉ ⲁϥⲛⲁⲩ ⲉ ⲡⲓⲥⲟⲛ ⲁϥⲭⲱⲗⲉⲙ ⲙ̀ⲙⲟϥ ⲁϥⲭⲱ ⲙ̀ⲡⲓⲱⲛⲓ ⲉⲡⲉⲥⲏⲧ ⲁϥϩⲉⲙⲥⲓ ϩⲓϫⲱϥ ⲡⲉϫⲉ ⲡⲓⲥⲟⲛ ⲛⲁϥ ϫⲉ ⲛⲁϩϯ ⲉⲣⲟⲓ ϫⲉ ⲁⲓⲉⲣϣⲫⲏⲣⲓ ⲛ̀ⲧⲁⲓⲛⲓϣϯ ⲛ̀ϫⲟⲙ ⲛⲉⲙ ⲧⲁⲓⲙⲉⲧϫⲱⲣⲓ ⲉⲧⲁⲕⲁ̀ⲓⲥ ϫⲉ ⲛ̀ⲁϣ ⲛ̀ⲣⲏϯ ⲁⲕⲉⲣϩⲩⲡⲟⲙⲉⲛⲓⲛ ⲁⲕⲧⲱⲟⲩⲛ ϧⲁ ⲡⲁⲓⲛⲓϣϯ ⲛ̀ⲕⲁⲩⲥⲱⲛ ⲛ̀ⲧⲁⲓⲙⲁⲓⲏ ⲁⲛⲟⲕ ⲅⲁⲣ ⲓⲥ ⲡⲓⲑⲱⲟⲩⲓ ⲧⲟⲓ ⲉ ⲛⲁϭⲁⲗⲁⲩϫ ϩⲏⲡⲡⲉ ⲁⲩⲣⲱⲕϩ ⲙ̀ⲫⲣⲏϯ ϫⲉ ⲉⲓⲙⲟϣⲓ ⲉϫⲉⲛ ϩⲁⲛϫⲉⲃⲥ ⲛ̀ⲭⲣⲱⲙ ⲉⲩⲙⲟϩ ϩⲁⲣⲁ ⲡⲁⲥⲟⲛ ⲡⲓⲥⲉⲛϯ ⲉⲣⲉ ⲟⲩ ⲙ̀ⲙⲉⲩⲓ ϧⲉⲛ ⲡⲉⲕϩⲏⲧ ϣⲁⲧⲉⲕⲉⲣ ⲧⲁⲓⲛⲓϣϯ ⲙ̀ⲡⲟⲗⲏⲧⲓⲁ ⲑⲁⲓ ⲉⲧⲉ ⲙ̀ⲙⲟⲛ ⲣⲱⲙⲓ ⲛⲁϣⲁ̀ⲓⲥ ⲛ̀ⲧⲉϥⲟϩⲓ ⲉⲣⲁⲧϥ ϩⲓϫⲉⲛ ⲡⲁⲓϣⲱ ⲛ̀ⲧⲉϥⲉⲣϩⲩⲡⲟⲙⲉⲛⲓⲛ ⲙ̀ⲡⲁⲓⲛⲓϣϯ ⲛ̀ϭⲱⲗⲕ ⲉⲃⲟⲗ ⲛ̀ⲧⲉ ⲡⲁⲓⲕⲁⲩⲙⲁ ⲙ̀ⲡⲁⲓⲣⲏϯ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲁⲣⲉϣⲧⲉⲙ ⲡⲓⲣⲱⲙⲓ ⲉⲣϩⲱⲃ ϧⲉⲛ ⲧⲉϥⲙⲉⲧⲕⲟⲩⲓ ⲉϥⲛⲁϣⲉⲣϩⲱⲃ ⲑⲱⲛ ϧⲉⲛ ⲡⲥⲏⲟⲩ ⲛ̀ⲧⲉϥⲙⲉⲧϧⲉⲗⲗⲟ ⲙⲉⲛⲉⲛⲥⲁ ⲑⲣⲉ ⲛⲉⲛⲕⲁⲥ ⲙ̀ⲡⲉϥⲥⲱⲙⲁ ϧⲓϯ. ⲟⲩⲉⲃϣⲓ ⲅⲁⲣ ⲉⲧϩⲓϫⲉⲛ ⲡϩⲏⲧ ⲙ̀ⲡⲓⲣⲱⲙⲓ ⲛ̀ⲥⲭⲱ ⲙ̀ⲙⲟϥ ⲁⲛ ⲉ ⲉⲣⲫⲙⲉⲩⲓ ⲙ̀ⲫϯ.</em></p>
+			<p>II</p>
+			<p>(<i>Ibid.</i> p. 352)</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p>III</p>
+			<p>(<i>Ibid.</i> p. 415)</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p class="footnote"></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p class="footnote"></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p>Extraits des mémoires de Dioscore<sup class="footnote">1</sup>.</p>
+			<p>I</p>
 			<p></p>
 		</div>
 <div id="liste_de_textes">
