--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -22150,39 +22150,39 @@
 			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲉϫⲁϥ ⲛⲁϥ ϫⲉ ⲁⲣⲉϣⲧⲉⲙ ⲡⲓⲣⲱⲙⲓ ⲉⲣϩⲱⲃ ϧⲉⲛ ⲧⲉϥⲙⲉⲧⲕⲟⲩⲓ ⲉϥⲛⲁϣⲉⲣϩⲱⲃ ⲑⲱⲛ ϧⲉⲛ ⲡⲥⲏⲟⲩ ⲛ̀ⲧⲉϥⲙⲉⲧϧⲉⲗⲗⲟ ⲙⲉⲛⲉⲛⲥⲁ ⲑⲣⲉ ⲛⲉⲛⲕⲁⲥ ⲙ̀ⲡⲉϥⲥⲱⲙⲁ ϧⲓϯ. ⲟⲩⲉⲃϣⲓ ⲅⲁⲣ ⲉⲧϩⲓϫⲉⲛ ⲡϩⲏⲧ ⲙ̀ⲡⲓⲣⲱⲙⲓ ⲛ̀ⲥⲭⲱ ⲙ̀ⲙⲟϥ ⲁⲛ ⲉ ⲉⲣⲫⲙⲉⲩⲓ ⲙ̀ⲫϯ.</em></p>
 			<p>II</p>
 			<p>(<i>Ibid.</i> p. 352)</p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
+			<p><em>ⲁϥϣⲱⲛⲓ ⲇⲉ ⲟⲛ ⲛ̀ⲟⲩⲥⲟⲡ ⲉ ⲡⲉϥⲥⲡⲗⲏⲛ ϧⲉⲛ ⲡⲅ̅ ⲙ̀ⲡϣⲁⲓ ⲙ̀ⲡⲓⲃⲱⲗ ⲛ̀ⲧⲉ ⲡⲓⲡⲁⲥⲭⲁ ⲙ̀ⲡⲉϥⲧⲁⲙⲉ ϩⲗⲓ ⲛ̀ⲛⲓⲥⲛⲏⲟⲩ ϫⲉ ϥϣⲱⲛⲓ.</em></p>
+			<p><em>ⲁϥϫⲟⲥ ⲅⲁⲣ ⲛⲱⲟⲩ ϫⲉ ϣⲗⲏⲗ ⲉϫⲱⲓ ⲛ̀ⲧⲁϣⲉ ⲛⲏⲓ ϣⲁ ϯⲙⲟⲛⲏ ⲛ̀ⲧⲉ ⲁⲃⲃⲁ ⲁⲃⲣⲁⲁⲙ ⲛ̀ⲧⲁϫⲉⲙⲡϣⲓⲛⲓ ⲛ̀ⲛⲓⲥⲛⲏⲟⲩ ⲛ̀ⲧⲉ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ ⲁⲣⲉϣⲁⲛ ⲫϯ ⲟⲩⲱϣ ϯⲛⲁⲓ̀ ϣⲁⲣⲱⲧⲉⲛ ⲛ̀ⲭⲱⲗⲉⲙ.</em></p>
+			<p><em>ⲉⲧⲁϥϫⲉ ⲫⲁⲓ ⲇⲉ ϫⲉ ϩⲓⲛⲁ ⲛ̀ⲧⲟⲩϣⲧⲉⲙⲉⲙⲓ ⲉⲣⲟϥ ϫⲉ ϥϣⲱⲛⲓ. ⲁⲣⲉϣⲁⲛ ⲟⲩⲁⲓ ⲇⲉ ϧⲉⲛ ⲛⲓⲁⲕⲣⲟⲁⲧⲏⲥ ⲟⲩⲱϣ ⲉ ϧⲟⲧϧⲉⲧ ϫⲉ ⲡⲱⲥ ⲥⲉϣⲱⲛⲓ ⲛ̀ϫⲉ ⲛⲓⲉⲃⲓⲁⲓⲕ ⲛ̀ⲧⲉ ⲡⲭ︤ⲥ︥ ⲙⲁⲣⲉ ⲫⲁⲓ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲱϣ ϧⲉⲛ ⲡϫⲱⲙ ⲛ̀ⲓⲱⲃ ⲡⲓⲇⲓⲕⲉⲟⲥ ⲭⲛⲁϫⲓⲙⲓ ⲙ̀ⲡϭⲥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ⲛⲁϥ ϫⲉ ⲉⲧⲁⲓⲓⲛⲓ ⲛ̀ⲛⲁⲓ ⲉϩⲣⲏⲓ ⲉϫⲱⲕ ⲁⲛ ⲛ̀ⲕⲉⲥⲙⲟⲧ ⲁⲗⲗⲁ ϫⲉ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲕⲟⲩⲱⲛϩ ⲉⲃⲟⲗ ⲛ̀ⲇⲟⲕⲓⲙⲟⲥ. ⲡⲁⲗⲓⲛ ⲟⲛ ϥϫⲱ ⲙ̀ⲙⲟⲥ ⲛ̀ϫⲉ ⲡⲁⲩⲗⲟⲥ ⲡⲓⲁⲡⲟⲥⲧⲟⲗⲟⲥ ϫⲉ ⲁⲓⲉⲣⲥⲙⲟⲧ ⲛⲓⲃⲉⲛ ⲛⲉⲙ ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ϫⲉ ϩⲓⲛⲁ ⲛ̀ⲧⲁⲛⲟϩⲉⲙ ⲛ̀ϩⲁⲛⲟⲩⲟⲛ.</em></p>
+			<p><em>ⲉⲧⲁ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲇⲉ ⲉⲣⲟⲩⲉⲃⲇⲟⲙⲁⲥ ⲛ̀ⲉϩⲟⲟⲩ ⲉϥϣⲱⲛⲓ ⲛⲁϥϧⲟⲥⲓ ⲡⲉ ϧⲉⲛ ⲡⲓϣⲱⲛⲓ ⲛⲁⲣⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲙⲉⲩⲓ ⲉⲣⲟϥ ϫⲉ ϥⲭⲏ ⲁⲛ ϧⲉⲛ ⲡⲓⲃⲏⲃ ⲁⲩⲥⲁϫⲓ ⲟⲩⲛ ⲛ̀ϫⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲉⲩϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲁϥⲱⲥⲕ ⲛ̀ϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲙⲁⲣⲉⲛϣⲓⲛⲓ ⲛ̀ⲥⲱϥ ⲓⲉ ⲁⲣⲏⲟⲩ ⲡⲁⲛⲧⲱⲥ ⲉⲧⲁ ⲡⲓϧⲓⲥⲓ ϩⲣⲟϣ ⲉϩⲣⲏⲓ ⲉϫⲱϥ ⲙ̀ⲡⲉϥϣⲧⲱⲟⲩⲛ.</em></p>
+			<p><em>ⲁⲩⲟⲩⲱⲣⲡ ⲇⲉ ⲛ̀ⲟⲩⲥⲟⲛ ⲉ ϣⲓⲛⲓ ⲛ̀ⲥⲱϥ. ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲇⲉ ⲓⲥϫⲉⲛ ⲉⲧⲁϥⲥⲉⲛ ⲛⲓⲥⲛⲏⲟⲩ ⲉⲃⲟⲗ ⲛⲁⲣⲉ ⲡϭⲟⲓⲥ ⲟⲩⲱⲣⲡ ⲛ̀ⲛⲏ ⲉⲑⲟⲩⲁⲃ ⲉⲩϫⲓⲙⲓ ⲙ̀ⲡⲉϥϣⲓⲛⲓ ⲉⲩϯⲛⲟⲙϯ ⲛⲁϥ. ⲕⲁⲧⲁ ⲟⲩⲟⲓⲕⲟⲛⲟⲙⲓⲁ ⲇⲉ ⲛ̀ⲧⲉ ⲫϯ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲧⲁ ⲡⲓⲥⲟⲛ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲓ ϣⲁⲣⲟϥ ⲛⲁϥⲭⲏ ϧⲁⲧⲟⲧϥ ⲡⲉ ⲛ̀ϫⲉ ⲏⲗⲓⲁⲥ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ.</em></p>
+			<p><em>ⲉⲧⲁ ⲡⲓⲥⲟⲛ ⲇⲉ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲟϩⲓ ⲉϥⲕⲱⲗϩ ⲉϧⲟⲩⲛ ⲟⲩⲟϩ ⲉϥⲙⲟⲩϯ ϩⲓⲧϩⲏ ⲙ̀ⲙⲟϥ ϫⲉ ⲥⲙⲟⲩ ⲉⲣⲟⲓ ⲉⲧⲁϥⲛⲁⲩ ⲇⲉ ⲛ̀ϫⲉ ⲏⲗⲓⲁⲥ ⲡⲓⲑⲉⲥⲃⲓⲧⲏⲥ ϫⲉ ⲡⲓⲥⲟⲛ ⲕⲱⲗϩ ⲁϥⲟⲩⲱϣ ⲉ ⲉⲣⲁⲛⲁⲭⲱⲣⲓⲛ ⲛⲁϥ.</em></p>
+			<p><em>ⲫⲏ ⲉⲑⲟⲩⲁⲃ ϫⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲁϥⲁⲙⲟⲛⲓ ⲙ̀ⲙⲟϥ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ϯϯϩⲟ ⲉⲣⲟⲕ ⲡⲁⲓⲱⲧ ⲙ̀ⲡⲉⲣϩⲱⲗ ⲛ̀ⲧⲉⲕⲭⲁⲧ ⲁⲗⲗⲁ ⲟϩⲓ ⲛⲉⲙⲏⲓ ⲛ̀ⲕⲉⲕⲟⲩϫⲓ ⲛ̀ⲧⲉⲕⲥⲉⲗⲥⲱⲗⲧ. ⲡⲓⲥⲟⲛ ⲇⲉ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲉⲧⲁϥⲛⲁⲩ ϫⲉ ⲙ̀ⲡⲉ ϩⲗⲓ ⲉⲣⲟⲩⲱ ⲛⲁϥ ⲁϥϯ ⲙ̀ⲡⲉϥⲟⲩⲟⲓ ⲉϧⲟⲩⲛ ⲁϥϫⲓⲙⲓ ⲛ̀ⲛⲏ ⲉⲑⲟⲩⲁⲃ ⲡⲓⲙⲁⲕⲁⲣⲓⲟⲥ ⲏⲗⲓⲁⲥ ⲡⲓⲑⲉⲥⲃⲩⲧⲏⲥ ⲛⲉⲙ ⲡⲓⲙⲁⲕⲁⲣⲓⲟⲥ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲉ ⲛⲁϥⲛ̀ⲕⲟⲧ ⲡⲉ ⲉϥϣⲱⲛⲓ. ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉ ⲡⲓⲥⲟⲛ ⲉⲧⲉⲙⲙⲁⲩ ϣⲉ ⲛⲁϥ ⲉϧⲟⲩⲛ  ⲁϥϭⲓ ⲙ̀ⲡⲓⲥⲙⲟⲩ ⲙ̀ⲡⲓⲃ̅ ⲉⲧⲁϥⲟϩⲓ ⲉⲣⲁⲧϥ ⲇⲉ ⲉϥⲛⲁϣⲗⲏⲗ ⲙ̀ⲡⲉϥϫⲉⲙϫⲟⲙ ⲙ̀ϥⲁⲓ ⲛ̀ⲛⲉϥⲃⲁⲗ ⲉⲡϣⲱⲓ ⲉ ⲥⲙⲟⲥ ⲉ ⲡϩⲟ ⲙ̀ⲡⲓⲁⲅⲓⲟⲥ ⲏⲗⲓⲁⲥ ⲉⲑⲃⲉ ⲡⲁϣⲁⲓ ⲛ̀ⲛⲓⲁⲕⲧⲓⲛ ⲛ̀ⲟⲩⲱⲓⲛⲓ ⲉϥⲛⲏⲟⲩ ⲉⲃⲟⲗϧⲉⲛ ⲡⲉϥϩⲟ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲥⲉⲧⲉⲃⲣⲏϫ.</em></p>
+			<p><em>ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲇⲉ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲉϫⲁϥ ⲙ̀ⲡⲓⲥⲟⲛ ϧⲉⲛ ⲟⲩϩⲟ ⲉϥⲙⲉϩ ⲛ̀ⲣⲁϣⲓ ϫⲉ ⲡⲓⲥⲟⲛ ⲙⲏ ⲫⲁⲓ ⲡⲉ ⲡⲓⲕⲱⲧ ⲉⲧⲁⲕϯ ⲙ̀ⲡⲉⲕⲟⲩⲟⲓ ⲉϧⲟⲩⲛ ⲁϭⲛⲉ ⲥⲟϭⲛⲓ. ⲉⲛⲉ ⲟⲩⲁⲣⲭⲱⲛ ⲛ̀ⲧⲉ ⲡⲁⲓⲕⲟⲥⲙⲟⲥ ⲡⲉ ⲙⲏ ⲭⲛⲁϣϣⲉ ⲉϧⲟⲩⲛ ⲁϭⲛⲉ ⲥⲟϭⲛⲓ ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲥⲟⲛ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ϫⲉ ⲭⲱ ⲛⲏⲓ ⲉⲃⲟⲗ ⲁⲓⲉⲣⲛⲟⲃⲓ ⲉⲧⲁⲓⲱⲥⲕ ϩⲓⲧϩⲏ ⲙ̀ⲡⲓⲣⲟ ⲉⲓⲕⲱⲗϩ ⲛⲁⲓⲙⲉⲩⲓ ⲛⲏⲓ ⲡⲉ ϫⲉ ⲉⲕⲟⲓ ⲛ̀ⲁⲥⲑⲉⲛⲏⲥ ⲙ̀ ⲡⲉⲕϣϫⲉⲙϫⲟⲙ ⲛ̀ⲧⲱⲟⲩⲛ ⲉ ⲉⲣⲟⲩⲱ ⲛⲏⲓ ⲉⲑⲃⲉ ⲫⲁⲓ ⲁⲓϯ ⲙ̀ⲡⲁⲟⲩⲟⲓ ⲉϧⲟⲩⲛ ϫⲉ ⲛ̀ⲧⲁϫⲉⲙ ⲡⲉⲕϣⲓⲛⲓ.</em></p>
+			<p><em>ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉ ⲡⲓⲥⲟⲛ ⲇⲉ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ϫⲉ ⲛⲁⲓ ⲉϥϯ ⲙⲉⲧⲁⲛⲟⲓⲁ ⲡⲉϫⲉ ⲏⲗⲓⲁⲥ ⲡⲓⲑⲉⲥⲃⲩⲧⲏⲥ ⲛ̀ⲁⲡⲁ ⲡⲓⲥⲉⲛϯ ϫⲉ ⲡⲑⲱϣ ⲙ̀ⲫϯ ⲡⲉ ⲫⲁⲓ ϫⲉ ⲟⲩⲏⲓ ϥⲉⲙⲡϣⲁ ⲛ̀ϫⲉ ⲡⲁⲓⲥⲟⲛ ⲉⲑⲣⲉϥⲉⲣⲁⲥⲡⲁⲍⲉⲥⲑⲉ ⲙ̀ⲙⲟⲛ ⲟⲩⲟϩ ⲛ̀ⲧⲉϥϭⲓ ⲙ̀ⲡⲉⲛⲥⲙⲟⲩ ⲉⲩⲥⲟⲛ. ⲉⲧⲁϥϫⲉ ⲛⲁⲓ ⲇⲉ ⲛ̀ϫⲉ ⲏⲗⲓⲁⲥ ⲡⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲁϥⲉⲣⲁⲛⲁⲭⲱⲣⲓⲛ ⲉⲃⲟⲗ ϩⲁⲣⲱⲟⲩ.</em></p>
+			<p><em>ⲡⲓⲥⲟⲛ ⲇⲉ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲛⲁϥϣⲓⲛⲓ ⲙ̀ⲫⲏ ⲉⲑⲟⲩⲁⲃ ϫⲉ ⲟⲩ ⲉⲃⲟⲗⲑⲱⲛ ⲡⲉ ⲡⲁⲓⲣⲱⲙⲓ ⲉⲣⲉ ⲡⲉϥϥⲱⲓ ϣⲏⲟⲩ ⲟⲩⲟϩ ⲉⲣⲉ ⲡⲁⲓⲛϣϯ ⲛ̀ⲱⲟⲩ ⲕⲱϯ ⲉⲣⲟϥ ϧⲉⲛ ⲟⲩⲙⲉⲑⲙⲏⲓ ⲙ̀ⲡⲓⲛⲁⲩ ⲉ ⲟⲩⲟⲛ ⲙ̀ⲡⲁⲓⲣⲏϯ ⲉⲛⲉϩ ⲉϥⲙⲉϩ ⲛ̀ⲱⲟⲩ ⲛⲉⲙ ⲙⲉⲧⲣⲁⲩϣ ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲫⲁⲓ ⲟⲩⲟϩ ϧⲉⲛ ϯⲟⲩⲛⲟⲩ ⲉⲧⲁⲓⲁⲙⲟⲛⲓ ⲛ̀ⲛⲉϥϫⲓϫ ⲁⲓⲟⲩⲱϣⲧ ⲙ̀ⲙⲱⲟⲩ ⲁ ⲟⲩⲛⲓϣϯ ⲛ̀ϫⲟⲙ ϣⲱⲡⲓ ϧⲉⲛ ⲡⲁⲥⲱⲙⲁ ⲁⲓⲕⲏⲛ ⲉⲓⲟⲓ ⲛ̀ⲁⲥⲑⲉⲛⲏⲥ ⲟⲩⲟϩ ⲁⲓⲟⲩⲛⲟϥ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲧⲁϥⲧⲱⲛϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲟⲩⲁⲣⲓⲥⲧⲟⲛ ⲁⲓϣⲁⲛϫⲟⲥ ⲟⲩⲛ ϫⲉ ⲫⲁ ⲡⲁⲓⲧⲱⲟⲩ ⲡⲉ ⲡⲁⲓⲣⲱⲙⲓ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲣⲟϥ ⲛ̀ϧⲏⲧϥ ⲟⲩⲟϩ ⲙ̀ⲡⲓⲛⲁⲩ ⲉ ⲟⲩⲟⲛ ⲉⲛⲉϩ ⲉϥⲣⲏⲧ ⲙ̀ϥⲱⲓ ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲫⲁⲓ ⲛⲉⲙ ⲡⲉϥⲥⲙⲟⲧ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲙⲁⲕⲁⲣⲓⲟⲥ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲉϫⲁϥ ⲙ̀ⲡⲓⲥⲟⲛ ϫⲉ ⲁⲣⲓⲟⲙⲟⲗⲟⲅⲓⲛ ϫⲉ ⲕⲛⲁⲁⲣⲉϩ ⲉ ⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲁⲛⲟⲕ ϯⲛⲁⲧⲁⲙⲟⲕ ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲥⲟⲛ ϫⲉ ⲓⲙⲏϯ ⲙⲉⲛⲉⲛⲥⲁ ⲟⲩⲥⲏⲟⲩ ⲛ̀ⲧⲉ ⲟⲩⲁⲛⲁⲅⲕⲏ ⲧⲁϩⲟⲓ ⲛ̀ⲧⲁⲟⲩⲟⲛϩϥ ⲉⲃⲟⲗ ⲛ̀ϯⲛⲁϫⲟϥ ⲁⲛ. ⲡⲁⲗⲓⲛ ⲟⲛ ⲡⲉϫⲉ ⲡⲓⲥⲟⲛ ⲛⲁϥ ⲟⲛ ϫⲉ ⲙ̀ⲡⲉⲕⲥⲱⲧⲉⲙ ⲉ ⲣⲁⲫⲁⲏⲗ ⲡⲓⲁⲣⲭⲏⲁⲅⲅⲉⲗⲟⲥ ⲉϥⲥⲁϫⲓ ⲛⲉⲙ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲧⲱⲃⲓⲁⲥ ϫⲉ ⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ⲛ̀ⲧⲉ ⲡⲟⲩⲣⲟ ⲛⲁⲛⲉⲥ ⲉ ϩⲟⲡϥ ⲛⲓϩⲃⲏⲟⲩⲓ ⲛ̀ⲧⲉ ⲫϯ ⲛ̀ⲑⲱⲟⲩ ⲛⲁⲛⲉⲥ ⲉ ⲟⲩⲟⲛϩⲟⲩ ⲉⲃⲟⲗ ⲁⲗⲗⲁ ϯⲥⲱⲟⲩⲛ ϫⲉ ⲕⲙⲟⲥϯ ⲙ̀ⲡⲓⲱⲟⲩ ⲉⲧϣⲟⲩⲓⲧ ⲛ̀ⲧⲉ ⲛⲓⲣⲱⲙⲓ ⲙⲁⲧⲁⲙⲟⲓ ⲉ ⲡⲓⲙⲩⲥⲧⲏⲣⲓⲟⲛ ϯⲛⲁϯ ⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ ⲛⲁⲕ ⲁⲛ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲓⲙⲁⲕⲁⲣⲓⲟⲥ ⲁⲃⲃⲁ ⲡⲓⲥⲉⲛϯ ⲡⲉϫⲁϥ ⲙ̀ⲡⲓⲥⲟⲛ ϫⲉ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲓϣⲉ ⲛⲏⲓ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛⲑⲏⲛⲟⲩ ⲉⲓⲟⲩⲱϣ ⲉ ϩⲱⲗ ⲉ ⲡⲓⲙⲟⲛⲁⲥⲧⲏⲣⲓⲟⲛ ⲛ̀ⲧⲉ ⲁⲃⲃⲁ ⲁⲃⲣⲁⲁⲙ ⲛ̀ⲧⲁϫⲉⲙ ⲡⲉϥϣⲓⲛⲓ ⲁⲓⲛⲁⲩ ⲉ ⲡⲁⲥⲱⲙⲁ ⲉϥⲟⲓ ⲛ̀ⲁⲥⲑⲉⲛⲏⲥ ⲁⲓϫⲟⲥ ϫⲉ ⲙⲏⲡⲱⲥ ϯⲛⲁϣϣⲉ ⲉⲙⲁⲩ ⲁⲛ ⲛ̀ⲧⲁϣⲱⲡⲓ ⲉⲓⲣⲁϧⲧ ⲉϧⲣⲏⲓ ϩⲓ ⲡⲓⲙⲱⲓⲧ ⲉⲑⲃⲉ ⲧⲁⲙⲉⲧⲁⲧϫⲟⲙ ⲁⲓⲓ̀ ⲉ ⲡⲁⲓⲙⲁ ⲁⲓⲟⲣϥⲧ ⲉϧⲟⲩⲛ ⲉ ⲧⲁⲓⲕⲟⲩϫⲓ ⲛ̀ⲣⲓ. ⲓⲥϫⲉⲛ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲁⲓⲓ̀ ⲉⲃⲟⲗϩⲓⲧⲉⲛ ⲑⲏⲛⲟⲩ ⲙ̀ⲡⲓⲛⲁⲩ ⲉ ⲡϩⲟ ⲛ̀ⲟⲩⲣⲱⲙⲓ ⲉⲃⲏⲗ ⲉⲣⲟⲕ.</em></p>
+			<p><em>ⲉⲧⲁ ⲡⲁⲥⲡⲗⲏⲛ ϯⲙ̀ⲕⲁϩ ⲛⲏⲓ ⲉⲙⲁϣⲱ ⲁⲓϯϩⲟ ⲉ ⲡⲁϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲁϥⲉⲣϩⲙⲟⲧ ⲛⲏⲓ ⲙ̀ⲡⲓⲧⲁⲗϭⲟ ⲙ̀ⲡⲁⲥⲱⲙⲁ ⲟⲩⲟϩ ⲟⲛ ⲉⲑⲃⲉ ⲡⲁⲓⲣⲱⲙⲓ ⲉⲧⲁⲕⲛⲁⲩ ⲉⲣⲟϥ ⲫⲁⲓ ⲡⲉ ⲏⲗⲓⲁⲥ ⲡⲓⲑⲉⲥⲃⲩⲧⲏⲥ ⲫⲏ ⲉⲧⲁⲩⲟⲗϥ ⲉ ⲧⲫⲉ ϧⲉⲛ ϩⲁⲛϩⲁⲣⲙⲁ ⲛ̀ⲭⲣⲱⲙ.</em></p>
+			<p><em>ⲁⲗⲗⲁ ϯϯϩⲟ ⲉⲣⲟⲕ ⲡⲁⲥⲟⲛ ⲙ̀ⲙⲁⲓⲛⲟⲩϯ ⲛ̀ⲧⲉⲕϣⲧⲉⲙϫⲉ ⲡⲁⲓⲥⲁϫⲓ ⲛ̀ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ ϣⲁ ⲡⲉϩⲟⲟⲩ ⲙ̀ⲡⲁⲙⲟⲩ. ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉ ⲡⲓⲥⲟⲛ ⲇⲉ ⲥⲱⲧⲉⲙ ⲉ ⲛⲁⲓ ⲛ̀ⲧⲟⲧϥ ⲙ̀ⲡⲓϧⲉⲗⲗⲟ ⲁϥⲣⲁϣⲓ ⲉⲙⲁϣⲱ ⲟⲩⲟϩ ⲙ̀ⲡⲉϥⲟⲩⲉⲛϩ ⲡⲓⲥⲁϫⲓ ⲉⲃⲟⲗ ϣⲁ ⲡⲓⲉϩⲟⲟⲩ ⲉⲧⲁ ⲡϭⲥ ϫⲉⲙ ⲡⲉϥϣⲓⲛⲓ ⲛ̀ϧⲏⲧϥ.</em></p>
 			<p>III</p>
 			<p>(<i>Ibid.</i> p. 415)</p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p class="footnote"></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p class="footnote"></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
+			<p><em>Ⲁⲥϣⲱⲡⲓ ⲇⲉ ϧⲉⲛ ⲡϫⲓⲛⲑⲣⲉ ⲫϯ ⲟⲩⲱϣ ⲉ ⲟⲩⲟⲑⲃⲉϥ ⲉⲃⲟⲗϧⲉⲛ ⲡⲁⲓⲙⲁⲛ̀ϫⲱⲓⲗⲓ ⲉ ⲟⲗϥ ⲉ ⲧⲭⲱⲣⲁ ⲛ̀ⲧⲉ ⲛⲏ ⲉⲧⲟⲛϧ ⲫⲙⲁⲛ̀ϣⲱⲡⲓ ⲛ̀ⲛⲓⲡⲁⲧⲣⲓⲁⲣⲭⲏⲥ ⲛⲉⲙ ⲛⲓⲡⲣⲟⲫⲏⲧⲏⲥ ⲛⲉⲙ ⲛⲓⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲉⲧⲁϥⲓ̀ ⲇⲉ ⲉ ⲥⲟⲩⲁⲓ ⲙ̀ⲡⲓⲁⲃⲟⲩⲧ ⲉⲡⲏⲡ ⲁϥⲛⲁⲩ ⲉ ⲟⲩϩⲟⲣⲁⲙⲁ ⲟⲩⲟϩ ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲛⲓⲙ ⲡⲉ ⲉⲧⲭⲏ ϧⲉⲛ ⲡⲁⲓⲙⲁ. ⲡⲉϫⲏⲓ ⲛⲁϥ ϫⲉ ⲙ̀ⲙⲟⲛ ϩⲗⲓ ⲛⲣⲱⲙⲓ ⲭⲏ ⲙ̀ⲡⲁⲓⲙⲁ ⲉⲃⲏⲗ ⲉ ⲙⲱⲩⲥⲏⲥ ⲛⲉⲙ ⲉⲗⲓⲥⲉⲟⲥ ⲉⲧⲁⲩⲓ̀ ⲉ ϫⲉⲙ ⲡⲉⲕϣⲓⲛⲓ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲡⲁⲓⲱⲧ ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ϧⲁⲧϩⲏ ⲙ̀ⲡⲁϯⲥⲁϫⲓ ⲛⲉⲙⲁⲕ ⲁ ⲟⲩⲉⲕⲥⲧⲁⲥⲓⲥ ⲧⲁϩⲟⲓ ⲁⲓⲛⲁⲩ ⲉ ⲟⲩⲙⲏϣ ⲛ̀ⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛ̀ⲟⲣⲑⲟⲇⲟⲝⲟⲥ ⲉⲩⲉⲣⲟⲩⲱⲓⲛⲓ ⲙ̀ⲫⲣⲏϯ ⲙ̀ⲫⲣⲏ ⲉⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ϧⲉⲛ ⲧⲁⲓⲁⲩⲗⲏ ⲉⲩϩⲱⲥ ⲉ ⲫϯ ⲉⲣⲉ ⲡⲉⲧⲣⲟⲥ ⲛⲉⲙ ⲡⲁⲩⲗⲟⲥ ⲟϩⲓ ⲉⲣⲁⲧⲟⲩ ϧⲉⲛ ⲧⲟⲩⲙⲏϯ ⲁⲛⲟⲕ ⲇⲉ ⲁⲓϩⲓⲧ ⲉϫⲉⲛ ⲡⲁϩⲟ ⲁⲓⲟⲩⲱϣⲧ ⲙ̀ⲙⲱⲟⲩ ⲡⲉⲧⲣⲟⲥ ⲇⲉ ⲁϥⲁⲙⲟⲛⲓ ⲛ̀ⲧⲁϫⲓϫ ⲁϥⲧⲁϩⲟⲓ ⲉⲣⲁⲧ ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ⲙ̀ⲡⲉⲕⲥⲟⲩⲱⲛⲧ ϫⲉ ⲁⲛⲟⲕ ⲛⲓⲙ.</em></p>
+			<p><em>ⲡⲉϫⲏⲓ ⲛⲁϥ ϫⲉ ⲙ̀ⲫⲏ ⲡⲁϭⲥ. ⲁϥⲉⲣⲟⲩⲱ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ ⲥⲓⲙⲱⲛ ⲡⲉⲧⲣⲟⲥ ⲫⲃⲱⲕ ⲟⲩⲟϩ ⲡⲁⲡⲟⲥⲧⲟⲗⲟⲥ ⲛ̀ⲧⲉ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲁⲥⲟⲛ ⲉⲧⲉⲕⲛⲁⲩ ⲉⲣⲟϥ ⲡⲉ ⲡⲁⲩⲗⲟⲥ ⲟⲩⲟϩ ⲛⲉⲕϣⲫⲏⲣ ⲛ̀ⲉⲡⲓⲥⲕⲟⲡⲟⲥ ⲛⲉ ⲛⲁⲓ ⲉⲧⲁⲩⲟⲩⲟⲣⲡⲧⲉⲛ ⲅⲁⲣ ϩⲁⲣⲟⲕ ⲉⲃⲟⲗϩⲓⲧⲉⲛ ⲡⲉⲛⲥⲁϧ ⲡⲭ︤ⲥ︥ ⲉⲑⲣⲉⲛⲑⲁϩⲙⲉⲕ ϩⲁⲣⲟⲛ ϫⲉ ϩⲓⲛⲁ ⲉⲕⲉⲥⲉⲃⲧⲉ<sup class="footnote">1</sup> ⲛⲉⲕϩⲃⲏⲟⲩⲓ ⲉ ⲡⲉⲕⲙⲱⲓⲧ ⲛ̀ⲓ̀ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲁⲓⲃⲓⲟⲥ…</em></p>
+			<p class="footnote">L'emploi du futur après <em>ϩⲓⲛⲁ</em> est exceptionnel.</p>
+			<p><em>ⲛⲁⲓ ⲇⲉ ⲉⲧⲁϥϫⲟⲧⲟⲩ ⲛⲁⲛ ⲁⲛϥⲁⲓ ⲛ̀ⲧⲉⲛⲥⲙⲏ ⲉⲡϣⲱⲓ ⲁⲛⲣⲓⲙⲓ ϧⲉⲛ ⲟⲩⲣⲓⲙⲓ ⲉϥⲉⲛϣⲁϣⲓ ⲉⲛⲉⲙⲓ ⲉ ⲫⲁⲓ ϫⲉ ⲛ̀ⲛⲁⲉⲣϧⲁⲉ<sup class="footnote">1</sup> ⲛ̀ⲟⲩⲓⲱⲧ ⲛ̀ⲇⲓⲕⲉⲟⲥ ⲛ̀ⲧⲁⲓⲙⲁⲓⲏ. ⲁϥⲉⲣⲟⲩⲱ ⲡⲉϫⲁϥ ⲛⲁⲛ ϫⲉ ⲉⲑⲃⲉ ⲟⲩ ⲧⲉⲧⲉⲛⲣⲓⲙⲓ ⲉⲣⲉⲧⲉⲛϯ ⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ ⲙ̀ⲡⲁⲡ︤ⲛ︦ⲁ︥ ⲁⲛⲟⲕ ⲅⲁⲣ ϯⲛⲁϩⲱⲗ ⲉⲣⲁⲧⲟⲩ ⲛ̀ⲛⲁⲓⲟϯ ⲉⲑⲟⲩⲁⲃ ⲉⲧⲁⲩϫⲱⲕ ⲉⲃⲟⲗ ϧⲁϫⲱⲓ. ⲛ̀ⲑⲟⲕ ⲇⲉ ⲙⲱⲩⲥⲏⲥ ⲕⲥⲱⲟⲩⲛ ϫⲉ ⲉⲧⲁⲓⲓⲛⲓ ⲙ̀ⲡⲉⲕⲃⲓⲟⲥ ⲉⲡϣⲱⲓ ϧⲁⲧⲟⲧ ⲛ̀ⲁϣ ⲛ̀ⲣⲏϯ ⲗⲟⲓⲡⲟⲛ ϥⲓⲫⲣⲱⲟⲩϣ ⲛ̀ⲛⲁϫⲱⲙ ϫⲉ ⲭⲛⲁⲉⲣⲭⲣⲓⲁ ⲙ̀ⲙⲱⲟⲩ ⲟⲩⲟϩ ⲭⲛⲁⲉⲣ ⲉⲃⲟⲗ ⲁⲛ ⲉ ϯⲉⲧⲫⲱ ⲉⲧϩⲟⲣϣ ⲉⲧⲉⲙⲙⲁⲩ.</em></p>
+			<p><em>ⲡⲉϫⲁϥ ⲇⲉ ⲛ̀ⲉⲗⲓⲥⲉⲟⲥ ⲡⲓⲡⲣⲉⲥⲃⲩⲧⲉⲣⲟⲥ ϫⲉ ⲉⲗⲓⲥⲉⲟⲥ ⲟϩⲓ ⲉⲣⲁⲧⲕ ⲛ̀ⲕⲁⲗⲱⲥ ⲉϫⲉⲛ ⲛⲓⲥⲛⲏⲟⲩ ⲟⲩⲟϩ ⲁⲣⲉϩ ⲉ ⲛⲏ ⲉⲧⲁⲓϩⲉⲛϩⲱⲛⲕ ⲉⲣⲱⲟⲩ ⲛ̀ⲧⲉⲕⲑⲱⲟⲩϯ ⲙ̀ⲡⲓϣⲉ ⲛ̀ⲑⲱⲟⲩϯ ⲕⲁⲧⲁ ⲟⲩⲛⲟⲩ ϫⲉⲭⲁⲥ ⲉⲣⲉ ⲛⲓⲥⲛⲏⲟⲩ ⲉⲣⲛⲟⲩϣⲉⲙϣⲓ ⲕⲁⲧⲁ ⲟⲩⲛⲟⲩ ⲛ̀ⲥⲉϯ ϩⲏⲟⲩ ⲛ̀ⲛⲟⲩⲯⲩⲭⲏ ⲉⲃⲟⲗ ϩⲓⲧⲟⲧⲕ.</em></p>
+			<p><em>ⲓⲧⲁ ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲁϣⲏⲣⲓ ⲕⲥⲱⲟⲩⲛ ⲙ̀ⲡⲁⲃⲓⲟⲥ ⲧⲏⲣϥ ϫⲉ ⲙⲡⲓⲭⲁ ϩⲗⲓ ⲛ̀ⲓⲇⲟⲥ ⲛ̀ⲧⲉ ϯⲉⲕⲕⲗⲏⲥⲓⲁ ⲛ̀ⲧⲉ ϯⲡⲟⲗⲓⲥ ⲕⲉϥⲧ ⲛ̀ⲧⲟⲧ ⲉⲛⲉϩ ⲟⲩⲗⲁⲩⲓ ⲛ̀ⲟⲗⲟⲕⲟϫⲓ ⲛ̀ⲟⲩⲱⲧ ⲉⲧⲭⲏ ⲛ̀ⲧⲟⲧ ⲓⲥϫⲉⲛ ⲡⲓⲥⲏⲟⲩ ⲉⲓϣⲟⲡ ϧⲉⲛ ⲧⲁⲣⲓ ⲉⲓⲟⲓ ⲙ̀ⲙⲟⲛⲁⲭⲟⲥ ⲉⲧⲁⲓϫⲫⲟⲥ ϧⲉⲛ ⲡⲁϩⲱⲃ ⲛ̀ϫⲓϫ ⲉⲓⲣⲱⲓⲥ ⲉⲣⲟⲥ ϣⲁ ⲫⲟⲟⲩ ⲉⲡϫⲓⲛϩⲟⲡⲥ ⲡⲁⲥⲱⲙⲁ ϫⲉ ⲟⲩⲏⲓ ⲁⲓⲁⲣⲉϩ ⲉⲣⲟⲓ ⲉϣⲧⲉⲙⲭⲁ ϩⲗⲓ ⲛ̀ϭⲣⲟϥ ⲛ̀ⲛⲏ ⲉⲑⲛⲏⲟⲩ ⲙⲉⲛⲉⲛⲥⲱⲓ ⲛ̀ⲥⲉϫⲟⲥ ϫⲉ ⲁⲕⲉⲣ ⲥⲁⲃⲟⲗ ⲙ̀ⲡⲉⲧⲥϣⲉ.</em></p>
+			<p class="footnote">1. Pour <em>ⲉⲛⲛⲁⲉⲣϧⲁⲉ</em>.</p>
+			<p><em>ⲁⲣⲓ ϯⲁⲅⲁⲡⲏ ⲛ̀ⲧⲉⲕϣⲟⲡⲥ ⲛ̀ⲕⲁⲓⲥⲓ ⲉⲡⲁⲥⲱⲙⲁ ⲟⲩⲟϩ ⲙ̀ⲡⲉⲣϯ ϩⲗⲓ ⲉⲣⲟⲓ ⲉⲃⲏⲗ ⲉ ⲡⲓⲗⲉⲃⲓⲧⲟⲩ ⲉⲧⲁⲩϯ ⲉϫⲱⲓ ⲙ̀ⲡⲓⲥⲭⲏⲙⲁ ⲉⲑⲟⲩⲁⲃ ⲛ̀ϧⲏⲧϥ ⲛⲉⲙ ⲧⲁⲕⲟⲩⲗⲗⲁ ⲛⲉⲙ ⲡⲁⲙⲟϫϧ ⲛⲉⲙ ⲡⲁϫⲓⲛϫⲱⲗϩ ⲛ̀ⲧⲉ ⲡⲁϣⲉⲙϣⲓ. ⲛ̀ⲧⲉⲧⲉⲛⲕⲟⲥⲧ ⲛ̀ⲧⲉⲧⲉⲛⲑⲱⲙⲥ ⲙ̀ⲙⲟⲓ ϧⲉⲛ ⲡⲓⲙⲁ ⲉⲧⲁⲓⲧⲁⲙⲱⲧⲉⲛ ⲉⲣⲟϥ ⲟⲩⲟϩ ⲙ̀ⲡⲉⲣⲭⲁ ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ ⲉ ⲱⲗⲓ ⲙ̀ⲡⲁⲥⲱⲙⲁ ⲥⲁⲃⲟⲗ ⲙ̀ⲡⲁⲙⲁⲛ̀ϣⲱⲡⲓ ⲛ̀ⲥⲉϭⲓⲧϥ ⲉ ϯⲡⲟⲗⲓⲥ ⲕⲉϥⲧ. ⲉⲧⲁϥϫⲉ ⲛⲁⲓ ⲇⲉ ⲁϥⲭⲁⲣⲱϥ.</em></p>
+			<p><em>ⲉⲡⲉϥⲣⲁⲥϯ ⲇⲉ ⲁϥⲉⲣϩⲏⲧⲥ ⲛ̀ϣⲱⲛⲓ ⲟⲩⲟϩ ⲉⲧⲁ ⲣⲟⲩϩⲓ ϣⲱⲡⲓ ⲛ̀ⲥⲟⲩⲏ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ ⲁⲩϩⲱⲗⲉⲙ ⲙ̀ⲡⲉϥⲛⲟⲩⲥ ⲉ ⲡϭⲓⲥⲓ ⲁϥⲉⲣⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲛⲉⲙ ⲅ̅ ⲛ̀ⲉϫⲱⲣϩ ⲙ̀ⲡⲉϥⲥⲁϫⲓ ⲛⲉⲙ ϩⲗⲓ. ϧⲉⲛ ⲡⲓⲉϫⲱⲣϩ ⲇⲉ ⲥⲟⲩⲓ̅ⲃ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ ⲁϥⲙⲟⲩϯ ϫⲉ ⲓⲱⲁⲛⲛⲏⲥ ⲡⲉϫⲏⲓ ⲛⲁϥ ϫⲉ ⲥⲙⲟⲩ ⲉⲣⲟⲓ ⲡⲁⲓⲱⲧ ⲉⲑⲟⲩⲁⲃ.</em></p>
+			<p><em>ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ϯϣⲓⲛⲓ ⲉⲣⲟϥ ϫⲉ ⲁϥϧⲱⲛⲧ ⲛ̀ϫⲉ ⲡⲁⲥⲏⲟⲩ ⲟⲩⲟϩ ϣⲁⲣⲉ ⲫϯ ϣⲓⲛⲓ ⲛ̀ⲥⲱⲓ ⲙ̀ⲫⲛⲁⲩ ⲛ̀ⲣⲟⲩϩⲓ ⲛ̀ⲣⲁⲥϯ ⲛ̀ⲥⲟⲩⲓ̅ⲅ̅ ⲟⲩⲟϩ ⲡⲁⲓⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲉⲧⲁⲓⲁⲧⲟⲩ ⲙ̀ⲡⲓⲥⲁϫⲓ ⲛⲉⲙ ⲣⲱⲙⲓ ⲛⲁⲓⲟϩⲓ ⲉⲣⲁⲧ ⲡⲉ ⲙ̀ⲡⲉⲙⲑⲟ ⲉⲃⲟⲗ ⲙ̀ⲡⲭ︤ⲥ︥ ⲫϯ ⲟⲩⲟϩ ⲁϥⲓⲣⲓ ⲙ̀ⲡⲁⲗⲟⲅⲟⲥ ⲓⲥϫⲉⲛ ⲁϫⲡⲑ̅ ⲛ̀ⲥⲁϥ ⲟⲩⲟϩ ϯϫⲱ ⲙ̀ⲙⲟⲥ ϫⲉ ⲡⲉϥⲛⲁⲓ ⲛⲁⲧⲁϩⲟⲓ. ⲁⲛⲟⲕ ⲇⲉ ⲡⲉϫⲏⲓ ⲛⲁϥ ϫⲉ ⲁⲣⲓ ϯⲁⲅⲁⲡⲏ ⲙⲁⲧⲁϫⲣⲉ ⲡⲉⲕϩⲏⲧ ⲛ̀ⲟⲩⲕⲟⲩϫⲓ ⲛ̀ⲱⲓⲕ ⲛⲉⲙ ⲟⲩⲙⲱⲟⲩ ϫⲉ ⲓⲥ ⲅ̅ ⲛ̀ⲉϩⲟⲟⲩ ⲙ̀ⲡⲉⲕϫⲉⲙϯⲡⲓ ⲛ̀ϩⲗⲓ.</em></p>
+			<p><em>ⲁϥⲉⲣⲟⲩⲱ ϫⲉ ϯⲛⲁϫⲉⲙϯⲡⲓ ⲛ̀ϩⲗⲓ ⲛ̀ⲧⲣⲟⲫⲏ ⲁⲛ ϫⲉ ⲛ̀ⲧⲉ ⲡⲁⲓⲕⲟⲥⲙⲟⲥ ϣⲁⲧⲁⲃⲱⲗ ⲉⲃⲟⲗ ⲛ̀ⲧⲁⲛⲏⲥⲧⲓⲁ ϧⲁⲧⲉⲛ ⲡϭⲥ ⲓ︤ⲏ︦ⲥ︥ ⲡⲭ︤ⲥ︥ ⲡⲁⲟⲩⲣⲟ. ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓ ⲇⲉ ⲡⲉϫⲁϥ ϫⲉ ⲡⲓⲙⲁⲣⲧⲩⲣⲟⲥ ⲉⲑⲟⲩⲁⲃ ⲛ̀ⲧⲉ ⲡⲭ︤ⲥ︥ ⲫϯ ⲓⲅⲛⲁⲧⲓⲟⲥ ⲡⲓⲑⲉⲟⲫⲟⲣⲟⲥ ϣⲱⲡⲓ ⲛⲉⲙⲏⲓ ϣⲁϯⲥⲓⲛⲓ ⲙ̀ⲡⲁⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲥⲱⲕ ϩⲓⲧϩⲏ ⲙ̀ⲡⲓⲭ︤ⲥ︥ ϫⲉ ⲟⲩⲛⲓϣϯ ⲧⲉ ϯϩⲟϯ ⲛ̀ⲧⲉ ⲡⲓⲙⲁ ⲉⲧⲉⲙⲙⲁⲩ. ⲡⲉϫⲏⲓ ⲇⲉ ⲛⲁϥ ϫⲉ ⲡⲁϭⲥ ⲛ̀ⲓⲱⲧ ⲙⲉⲛⲉⲛⲥⲁ ⲛⲁⲓϧⲓⲥⲓ ⲧⲏⲣⲟⲩ ⲛⲁⲓⲛⲏⲥⲧⲓⲁ ⲛⲉⲙ ⲛⲁⲓϣⲗⲏⲗ ⲛⲉⲙ ⲛⲁⲓⲉϫⲱⲣϩ ⲛ̀ϣⲣⲱⲓⲥ ⲉⲧⲁⲕⲉⲣϩⲩⲡⲟⲙⲉⲛⲓⲛ ⲉⲣⲱⲟⲩ ⲉⲑⲃⲉ ⲫϯ ⲕⲉ̀ⲣϩⲟϯ ϩⲱⲕ ϧⲁⲧϩⲏ ⲙ̀ⲡⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲉⲙⲙⲁⲩ.</em></p>
+			<p><em>ⲡⲉϫⲁϥ ⲛⲏⲓ ϫⲉ ⲛⲓⲙ ⲡⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲑⲛⲁⲉⲣ ⲉⲃⲟⲗ ⲉ ϣⲧⲉⲙϫⲉⲙϯⲡⲓ ⲙ̀ⲡⲓⲓⲁⲣⲟ ⲛ̀ⲭⲣⲱⲙ ⲉⲧⲉⲙⲙⲁⲩ. ⲟⲩⲟϩ ⲛⲁϥⲥⲁϫⲓ ⲁⲛ ϫⲉ ⲡⲉ ⲛⲉⲙ ϩⲗⲓ ⲛ̀ⲣⲱⲙⲓ.</em></p>
+			<p><em>ⲉⲧⲁ ϣⲱⲣⲡ ⲇⲉ ϣⲱⲡⲓ ⲁ ⲡⲓⲙⲁ ⲧⲏⲣⲇ ⲙⲟϩ ⲛ̀ⲣⲱⲙⲓ ⲥⲁϧⲟⲩⲛ ⲛⲉⲙ ⲥⲁⲃⲟⲗ ⲁϥⲉⲣ ⲡⲓⲉϩⲟⲟⲩ ⲧⲏⲣϥ ⲉⲧⲉⲙⲙⲁⲩ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲟⲩⲁⲓ ⲉⲩⲑⲱϩⲥ ⲙ̀ⲙⲟϥ ⲛ̀ⲛⲉϩ ⲉⲡϧⲁⲉ ⲇⲉ ⲁϥϫⲱ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ ϫⲉ ϩⲏⲡⲡⲉ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲓⲟⲩⲁϩⲥⲁϩⲛⲓ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ ⲟⲩⲟϩ ⲁⲓⲓⲣⲓ ⲙ̀ⲡⲁⲥⲟⲃϯ ⲟⲩⲟϩ ⲡⲁⲓⲣⲏϯ ⲁϥⲟⲩⲱⲛ ⲛ̀ⲣⲱϥ ⲁϥϯ ⲙ̀ⲡⲓⲡ︤ⲛ︦ⲁ︥ ⲉ ⲛⲉⲛϫⲓϫ ⲙ̀ⲫϯ ⲙ̀ⲡⲓⲛⲁⲩ ⲉⲣⲉ ⲫⲣⲏ ⲛⲁϩⲱⲧⲡ ⲛ̀ⲥⲟⲩⲓ̅ⲅ̅ ⲙ̀ⲡⲓⲁⲃⲟⲧ ⲉⲡⲏⲡ.</em></p>
 			<p>Extraits des mémoires de Dioscore<sup class="footnote">1</sup>.</p>
 			<p>I</p>
-			<p></p>
+			<p><em></em></p>
 		</div>
 <div id="liste_de_textes">
 			<p>Liste des Textes.</p>
